优化笔记内容，添加Java反射文档

--- a/docs/10.Java/05.Java集合 - Collection/08.HashSet.md
+++ b/docs/10.Java/05.Java集合 - Collection/08.HashSet.md
@@ -9,49 +9,45 @@ tags:
   - 
 ---
 
-## HashSet
-
-HashSet是一个没有重复元素的集合，它其实是由HashMap实现的，HashMap保存的是建值对，然而我们只能向HashSet中添加Key，原因在于HashSet的Value其实都是同一个对象，这是HashSet添加元素的方法，可以看到辅助实现HashSet的map中的value其实都是Object类的同一个对象。
+HashSet 是一个没有重复元素的集合，它其实是由 HashMap 实现的，HashMap 保存的是建值对，然而我们只能向 HashSet 中添加 Key，原因在于 HashSet 的 Value 其实都是同一个对象，这是 HashSet 添加元素的方法，可以看到辅助实现 HashSet 的 Map 中的 Value 其实都是 Object 类的同一个对象。
 
 特点：
 
 - 底层数据结构是哈希表
 - 对集合的迭代顺序不作任何保证，也就是说不保证存储和取出的元素顺序一致
-- 没有带索引的方法，所以不能使用普通for循环遍历
-- 由于是Set集合，所以是不包含重复元素的集合
+- 没有带索引的方法，所以不能使用普通 for 循环遍历
+- 由于是 Set 集合，所以是不包含重复元素的集合
 
+## 存储规则
 
+**哈希表边存放的是哈希值**。HashSet 存储元素的顺序并不是按照存入时的顺序（和 List 显然不同）是按照哈希值来存的所以取数据也是按照哈希值取得。
 
-### 存储规则
+HashSet 不存入重复元素的规则.使用 hashcode 和 equals。
 
-**哈希表边存放的是哈希值。**HashSet存储元素的顺序并不是按照存入时的顺序（和List显然不同） 是按照哈希值来存的所以取数据也是按照哈希值取得。
+由于 Set 集合是不能存入重复元素的集合。那么 HashSet 也是具备这一特性的。HashSet 如何检查重复？HashSet 会通过元素的 hashcode 和 equals 方法进行判断元素是否重复。
 
-HashSet不存入重复元素的规则.使用hashcode和equals
+当你试图把对象加入 HashSet 时，HashSet 会使用对象的 hashCode 来判断对象加入的位置。同时也会与其他已经加入的对象的 hashCode 进行比较，如果没有相等的 hashCode，HashSet 就会假设对象没有重复出现。
 
-由于Set集合是不能存入重复元素的集合。那么HashSet也是具备这一特性的。HashSet如何检查重复？HashSet会通过元素的hashcode（）和equals方法进行判断元素师否重复。
+简单一句话，如果对象的 hashCode 值是不同的，那么 HashSet 会认为对象是不可能相等的。
 
-当你试图把对象加入HashSet时，HashSet会使用对象的hashCode来判断对象加入的位置。同时也会与其他已经加入的对象的hashCode进行比较，如果没有相等的hashCode，HashSet就会假设对象没有重复出现。
+因此我们自定义类的时候需要重写 hashCode，来确保对象具有相同的 hashCode 值，因为 new 的两个类数据一样，这两个类默认 hashCode 不一致，所以主动重写 hashCode，通过对比类的数据来判断哈希值是否一样。
 
-简单一句话，如果对象的hashCode值是不同的，那么HashSet会认为对象是不可能相等的。
-
-因此我们自定义类的时候需要重写hashCode，来确保对象具有相同的hashCode值。
-
-如果元素(对象)的hashCode值相同，是不是就无法存入HashSet中了？当然不是，会继续使用equals 进行比较。如果 equals为true 那么HashSet认为新加入的对象重复了，所以加入失败。如果equals 为false那么HashSet 认为新加入的对象没有重复，新元素可以存入。
+如果元素（对象）的 hashCode 值相同，是不是就无法存入 HashSet 中了？当然不是，会继续使用 equals 进行比较。如果 equals 为 true，那么 HashSet 认为新加入的对象重复了，所以加入失败。如果 equals 为 false 那么 HashSet 认为新加入的对象没有重复，新元素可以存入。
 
 **总结：**
 
-元素的哈希值是通过元素的hashcode方法来获取的, HashSet首先判断两个元素的哈希值，如果哈希值一样，接着会比较equals方法 如果 equls结果为true ，HashSet就视为同一个元素。如果equals 为false就不是同一个元素。
+元素的哈希值是通过元素的 hashcode 方法来获取的, HashSet 首先判断两个元素的哈希值，如果哈希值一样，接着会比较 equals 方法 如果 equls 结果为 true，HashSet 就视为同一个元素。如果 equals 为 false 就不是同一个元素。
 
-哈希值相同equals为false的元素是怎么存储呢,就是在同样的哈希值下顺延（可以认为哈希值相同的元素放在一个哈希桶中）。也就是哈希一样的存一列。
-![image-20210331235903905](https://fastly.jsdelivr.net/gh/oddfar/static/img/JavaSE-集合.assets/image-20210331235903905.png)
+哈希值相同 equals 为 false 的元素是怎么存储呢，就是在同样的哈希值下顺延（可以认为哈希值相同的元素放在一个哈希桶中）。也就是哈希一样的存一列。
+![image-20220618215137282](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Java%E9%9B%86%E5%90%88/20220618215138.png)
 
-### HashSet用处
+## HashSet用处
 
-问题：现在有一批数据，要求不能重复存储元素，而且要排序。ArrayList 、 LinkedList不能去除重复数据。HashSet可以去除重复，但是是无序。
+问题：现在有一批数据，要求不能重复存储元素，而且要排序。ArrayList、LinkedList 不能去除重复数据。HashSet 可以去除重复，但是是无序。
 
-所以这时候就要使用TreeSet了
+所以这时候就要使用 TreeSet 了
 
-案例：创建一个学生类，并重写equals和hashcode
+案例：创建一个学生类，并重写 equals 和 hashcode
 
 ```java
 import java.util.Objects;
@@ -88,7 +84,7 @@ public class HashSetTest {
         HashSetStudent s1 = new HashSetStudent("李白1",15);
         HashSetStudent s2 = new HashSetStudent("李白2",16);
 
-        HashSetStudent s3 = new HashSetStudent("李白1",15);//重复值不插入
+        HashSetStudent s3 = new HashSetStudent("李白1",15); // 重复值不插入
         
         HashSetStudent s4 = new HashSetStudent("李白1",10);
         HashSetStudent s5 = new HashSetStudent("李白2",10);
@@ -115,12 +111,11 @@ public class HashSetTest {
 > 李白1--15
 > 李白2--16
 
-### LinkedHashSet
+## LinkedHashSet
 
 特点：
 
-- 哈希表和链表实现的Set接口，具有可预测的迭代次序
+- 哈希表和链表实现的 Set 接口，具有可预测的迭代次序
 - 由链表保证元素有序，也就是说元素的存储和取出顺序是一致的
 - 由哈希表保证元素唯一，也就是说没有重复的元素
 
-待补充......
