--- a/docs/10.Java/10.Java优化 - JUC/02.JUC - 概念.md
+++ b/docs/10.Java/10.Java优化 - JUC/02.JUC - 概念.md
@@ -14,7 +14,7 @@ tags:
 
 JUC是 `java.util.concurrent` 的简写，在并发编程中使用的工具类。在 JDK 官方手册中可以看到 JUC 相关的 jar 包有三个。
 
-用中文概括一下，JUC 的意思就是 Java并发编程工具包
+用中文概括一下，JUC 的意思就是 Java 并发编程工具包
 
 实现多线程有三种方式：Thread、Runnable、Callable，其中 Callable 就位于 concurrent 包下。
 
@@ -70,7 +70,7 @@ Java 中，线程作为最小调度单位，进程作为资源分配的最小单
 
 ### 总结
 
-- 并发（concurrent）是同一时间应对（dealing with）多件事情的能力
+- 并发（concurrent）是同一时间段应对（dealing with）多件事情的能力
 - 并行（parallel）是同一时间动手做（doing）多件事情的能力
 
 ### 例子
