--- a/docs/10.Java/10.Java优化 - JUC/04.JUC - Java线程.md
+++ b/docs/10.Java/10.Java优化 - JUC/04.JUC - Java线程.md
@@ -14,7 +14,7 @@ tags:
 
 ## 依赖准备
 
-本知识体系的代码不适用 `System.out.println()` 输出到控制台，而是使用 `log.info` 进行输出，下面是 log 的依赖：
+本知识体系的代码不使用 `System.out.println()` 输出到控制台，而是使用 `log.info` 进行输出，下面是 log 的依赖：
 
 ```xml
 <dependencies>
@@ -248,7 +248,7 @@ public class Test {
 ### Java
 
 - `jps` 命令查看所有 Java 进程
-- jstack  查看某个 Java 进程（PID）的所有线程状态
+- jstack 查看某个 Java 进程（PID）的所有线程状态
 - jconsole 来查看某个 Java 进程中线程的运行情况（图形界面）
 
 > jconsole 远程监控配置
@@ -616,7 +616,7 @@ while(true) {
 
 不需要睡眠太久，睡一下，就会导致 `while(true)` 的线程释放，给别的线程使用，这样既能保证代码一直运行，又不会导致 CPU 逐渐到 100%。
 
-- 可以用 wait 或 条件变量达到类似的效果
+- 可以用 wait 或条件变量达到类似的效果
 - 不同的是，后两种都需要加锁，并且需要相应的唤醒操作，一般适用于要进行同步的场景
 - sleep 适用于无需锁同步的场景
 
@@ -950,6 +950,8 @@ private static void test4() {
 | stop()    | 停止线程运行，不释放锁         |
 | suspend() | 挂起（暂停）线程运行，不释放锁 |
 | resume()  | 恢复线程运行，不释放锁         |
+
+其实很容易理解为什么被废弃，因为都是针对 **不释放锁** 而言，线程停止或者暂停，如果不释放锁，就会引起很多问题，如死锁等。
 
 ## 主线程与守护线程
 
