--- a/docs/10.Java/20.Java底层 - JVM/01.JVM - Java体系结构.md
+++ b/docs/10.Java/20.Java底层 - JVM/01.JVM - Java体系结构.md
@@ -17,7 +17,7 @@ tags:
 
 > 你是否也遇到过这些问题？
 
-运行着的线上系统突然卡死，系统无法访问，甚至直接 OOMM！
+运行着的线上系统突然卡死，系统无法访问，甚至直接 OOM！
 
 - 想解决线上 JVM GC 问题，但却无从下手
 - 新项目上线，对各种 JVM 参数设置一脸茫然，直接默认吧然后就挂了
@@ -115,7 +115,7 @@ Java 平台上的多语言混合编程正成为主流，通过特定领域的语
 
 试想一下，在一个项目之中，并行处理用 clojure 语言编写，展示层使用 JRuby/Rails，中间层则是 Java，每个应用层都将使用不同的编程语言来完成，而且，接口对每一层的开发者都是透明的，各种语言之间的交互不存在任何困难，就像使用自己语言的原生 API 一样方便，因为它们最终都运行在一个虚拟机之上。
 
-对这些运行于 Java 虚拟机之上、Java 之外的语言，来自系统级的、底层的支持正在迅速增强，以 JSR-292 为核心的一系列项目和功能改进（如 Da Vinci Machine 项目、Nashorn 引擎、InvokeDynamic 指令、java.lang.invoke 包等），推动 Java 虚拟机从「Java语言的虚拟机」向 「多语言虚拟机」的方向发展。
+对这些运行于 Java 虚拟机之上、Java 之外的语言，来自系统级的、底层的支持正在迅速增强，以 JSR-292 为核心的一系列项目和功能改进（如 Da Vinci Machine 项目、Nashorn 引擎、InvokeDynamic 指令、java.lang.invoke 包等），推动 Java 虚拟机从「Java 语言的虚拟机」向 「多语言虚拟机」的方向发展。
 
 ## Java发展的重大事件
 
@@ -184,11 +184,9 @@ Java 的体系结构
 
 ## JVM整体结构
 
-- HotSpot VM 是目前市面上高性能虚拟机的代表作之一。
-- 它采用解释器与即时编译器并存的架构。
-- 在今天，Java 程序的运行性能早已脱胎换骨，已经达到了可以和 C/C++ 程序一较高下的地步。
-
-![image-20200704183436495](D:\博客区\myNotes\docs\10.Java\05.JavaJVM\images\image-20200704183436495.png)
+- HotSpot VM 是目前市面上高性能虚拟机的代表作之一
+- 它采用解释器与即时编译器并存的架构
+- 在今天，Java 程序的运行性能早已脱胎换骨，已经达到了可以和 C/C++ 程序一较高下的地步
 
 执行引擎包含三部分：解释器，及时编译器，垃圾回收器
 
@@ -196,7 +194,7 @@ Java 的体系结构
 
 ![image-20200704210429535](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Java/20220115213117.png)
 
-只是能生成被 Java 虚拟机所能解释的字节码文件，那么理论上就可以自己设计一套代码了
+只是能生成被 Java 虚拟机所能解释的字节码文件，那么理论上就可以自己设计一套代码了。
 
 ## JVM的架构模型
 
