--- a/docs/10.Java/20.Java底层 - JVM/35.JVM - Class文件结构.md
+++ b/docs/10.Java/20.Java底层 - JVM/35.JVM - Class文件结构.md
@@ -104,10 +104,10 @@ public class IntegerTest {
 
 ```java
 0 bipush 10
- 2 invokestatic #2 <java/lang/Integer.valueOf : (I)Ljava/lang/Integer;>
- 5 astore_1
- 6 bipush 10
- 8 invokestatic #2 <java/lang/Integer.valueOf : (I)Ljava/lang/Integer;>
+2 invokestatic #2 <java/lang/Integer.valueOf : (I)Ljava/lang/Integer;>
+5 astore_1
+6 bipush 10
+8 invokestatic #2 <java/lang/Integer.valueOf : (I)Ljava/lang/Integer;>
 11 astore_2
 12 getstatic #3 <java/lang/System.out : Ljava/io/PrintStream;>
 15 aload_1
@@ -296,7 +296,7 @@ Class 的结构不像 XML 等描述语言，由于它没有任何分隔符号。
 
 Class 文件格式采用一种类似于 C 语言结构体的方式进行数据存储，这种结构中只有两种数据类型：**无符号数** 和 **表**。
 
-- 无符号数属于基本的数据类型，以 u1、u2、u4、u8 来分别代表1个字节、2 个字节、4 个字节、8 个字节的无符号数，无符号数可以用来描述数字、索引引用、数量值或者按照 UTF-8 编码构成字符串值
+- 无符号数属于基本的数据类型，以 u1、u2、u4、u8 来分别代表 1 个字节、2 个字节、4 个字节、8 个字节的无符号数，无符号数可以用来描述数字、索引引用、数量值或者按照 UTF-8 编码构成字符串值
 
 - 表是由多个无符号数或者其他表作为数据项构成的复合数据类型，所有表都习惯性地以 `_info` 结尾。表用于描述有层次关系的复合结构的数据，整个 Class 文件本质上就是一张表。由于表没有固定长度，所以通常会在其前面加上个数说明
 
@@ -358,7 +358,7 @@ Class 文件的总体结构如下：
             <td>魔数</td>
             <td>u4</td>
             <td>magic</td>
-            <td>魔数,识别 Class 文件格式</td>
+            <td>魔数，识别 Class 文件格式</td>
             <td>4 个字节</td>     
             <td>1</td>
        </tr>
@@ -476,6 +476,7 @@ Class 文件的总体结构如下：
         </tr>	
    </tbody> 
 </table>
+
 
 
 ## 魔数
@@ -801,7 +802,7 @@ public class ArrayTest {
 
 ### this_class(类索引)
 
-2字节无符号整数，指向常量池的索引。它提供了类的全限定名，如com/kele/java1/Demo。this_class 的值必须是对常量池表中某项的一个有效索引值。常量池在这个索引处的成员必须为 CONSTANT_Class_info 类型结构体，该结构体表示这个 Class 文件所定义的类或接口。
+2 字节无符号整数，指向常量池的索引。它提供了类的全限定名，如 com/kele/java1/Demo。this_class 的值必须是对常量池表中某项的一个有效索引值。常量池在这个索引处的成员必须为 CONSTANT_Class_info 类型结构体，该结构体表示这个 Class 文件所定义的类或接口。
 
 ### super_class(父类索引)
 
