--- a/docs/10.Java/20.Java底层 - JVM/39.JVM - 类的加载过程详解.md
+++ b/docs/10.Java/20.Java底层 - JVM/39.JVM - 类的加载过程详解.md
@@ -311,7 +311,7 @@ Java 虚拟机为各类型变量默认的初始值如表所示：
 | boolean   | false      |
 | reference | null       |
 
-Java 并不支持 boolean 类型，对于 boolean 类型，内部实现是 int，由于 int 的默认值是0，故对应的，boolean 的默认值就是 false。
+Java 并不支持 boolean 类型，对于 boolean 类型，内部实现是 int，由于 int 的默认值是 0，故对应的，boolean 的默认值就是 false。
 
 注意：
 
@@ -374,18 +374,18 @@ invokevirtual #24 <java/io/PrintStream.println>
 
 类的初始化是类装载的最后一个阶段。如果前面的步骤都没有问题，那么表示类可以顺利装载到系统中。此时，类才会开始执行 Java 字节码。（即：到了初始化阶段，才真正开始执行类中定义的 Java 程序代码）。
 
-**初始化阶段的重要工作是执行类的初始化方法：`<clinit>()` 方法。**
+**初始化阶段的重要工作是执行类的初始化方法：`<clinit>()` 和 `<init>()` 方法。**
 
-- 该方法仅能由 Java 编译器生成并由 JVM 调用，程序开发者无法自定义一个同名的方法，更无法直接在 Java 程序中调用该方法，虽然该方法也是由字节码指令所组成
-- 它是类静态成员的赋值语句以及 static 语句块合并产生的
+- `<clinit>()` 方法仅能由 Java 编译器生成并由 JVM 调用，程序开发者无法自定义一个同名的方法，更无法直接在 Java 程序中调用该方法，虽然该方法也是由字节码指令所组成，它是类静态成员的赋值语句以及 static 语句块合并产生的
+- `<init>()` 方法是初始化普通的变量，并非 static 静态变量
 
 > 说明
 
-1. 在加载一个类之前，虚拟机总是会试图加载该类的父类，因此父类的 总是在子类 之前被调用，也就是说，父类的 static 块优先级高于子类
+1. 在加载一个类之前，虚拟机总是会试图加载该类的父类，因此父类总是在子类之前被调用，也就是说，父类的 static 块优先级高于子类
 2. Java 编译器并不会为所有的类都产生 `<clinit>()` 初始化方法。哪些类在编译为字节码后，字节码文件中将不会包含 `<clinit>()` 方法？
-3. 一个类中并没有声明任何的类变量，也没有静态代码块时
-4. 一个类中声明类变量，但是没有明确使用类变量的初始化语句以及静态代码块来执行初始化操作时
-5. 一个类中包含 static final 修饰的基本数据类型的字段，这些类字段初始化语句采用编译时常量表达式
+   - 一个类中并没有声明任何的类变量，也没有静态代码块时
+   - 一个类中声明类变量，但是没有明确使用类变量的初始化语句以及静态代码块来执行初始化操作时
+3. 一个类中包含 static final 修饰的基本数据类型的字段，这些类字段初始化语句采用编译时常量表达式
 
 > 代码示例 1
 
@@ -534,6 +534,15 @@ public class StaticDeadLockMain extends Thread {
     }
 }
 ```
+
+> 什么时候初始化普通变量？
+
+普通变量要和类一起初始化（`<init>` 方法里），也是在初始化阶段，初始化阶段如下：
+
+- 首先，加载父类中的静态代码块和静态属性，按照静态代码块和静态属性在代码中从上到下出现的先后顺序加载
+- 然后，加载子类中的静态代码块和静态属性，按照静态代码块和静态属性在代码中从上到下出现的先后顺序加载
+- 其次，加载父类中的普通代码块和普通属性，按照普通代码块和普通属性在代码中从上到下出现的先后顺序加载
+- 最后，加载子类中的普通代码块和普通属性，按照普通代码块和普通属性在代码中从上到下出现的先后顺序加载
 
 ### 主动使用 vs 被动使用
 
@@ -1078,7 +1087,7 @@ interface SerialA{
 
 任何一个类型在使用之前都必须经历过完整的加载、链接和初始化 3 个类加载步骤。一旦一个类型成功经历过这 3 个步骤之后，便「万事俱备，只欠东风」，就等着开发者使用了。
 
-开发人员可以在程序中访问和调用它的静态类成员信息(比如：静态字段、静态方法)，或者使用 new 关键字为其创建对象实例。
+开发人员可以在程序中访问和调用它的静态类成员信息（比如：静态字段、静态方法），或者使用 new 关键字为其创建对象实例。
 
 ## 类的Unloading(卸载)
 
@@ -1101,7 +1110,7 @@ interface SerialA{
 
 ![image-20220130001701615](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Java/20220130001702.png)
 
-`Loader1` 变量和 obj 变量间接应用代表 Sample 类的 Class 对象，而 `objClass` 变量则直接引用它。
+`Loader1` 变量和 objClass 变量间接应用代表 Sample 类的 Class 对象，而 `objClass` 变量则直接引用它。
 
 如果程序运行过程中，将上图左侧三个引用变量都置为 null，此时 Sample 对象结束生命周期，MyClassLoader 对象结束生命周期，代表 Sample 类的 Class 对象也结束生命周期，Sample 类在方法区内的二进制数据 **被卸载。**
 
@@ -1114,7 +1123,7 @@ interface SerialA{
 2. 被系统类加载器和扩展类加载器加载的类型在运行期间不太可能被卸载，因为系统类加载器实例或者扩展类的实例基本上在整个运行期间总能直接或者间接的访问的到，其达到 unreachable 的可能性极小
 3. 被开发者自定义的类加载器实例加载的类型只有在很简单的上下文环境中才能被卸载，而且一般还要借助于强制调用虚拟机的垃圾收集功能才可以做到。可以预想，稍微复杂点的应用场景（比如：很多时候用户在开发自定义类的加载器实例的时候采用缓存的策略以提高系统性能），被加载的类型在运行期间也是几乎不太可能被卸载的（至少卸载的时间是不确定的）
 
-综合以上三点，一个已经加载的类型被卸载的几率很小至少被卸载的时间是不确定的。同时我们可以看的出来，开发者在开发代码时候，不应该对虚拟机的类型卸载做任何假设的前提下，来实现系统中的特定功能。
+综合以上三点，一个已经加载的类型被卸载的几率很小，至少被卸载的时间是不确定的。同时我们可以看的出来，开发者在开发代码时候，不应该对虚拟机的类型卸载做任何假设的前提下，来实现系统中的特定功能。
 
 ### 回顾：方法区的垃圾回收
 
