--- a/docs/20.数据库/10.缓存数据库 - Redis/10.Redis - 配置文件.md
+++ b/docs/20.数据库/10.缓存数据库 - Redis/10.Redis - 配置文件.md
@@ -30,8 +30,6 @@ config get * # 获取全部的配置
 
 我们一般情况下，会单独拷贝出来一份进行操作。来保证初始文件的安全。
 
-正如在 `安装 redis` 中的讲解中拷贝一份。
-
 ## 单位
 
 容量单位不区分大小写，但是容量大小 G 和 GB 有区别。
@@ -44,7 +42,7 @@ config get * # 获取全部的配置
 
 ![image-20211226151548208](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Redis/20211226151549.png)
 
-类似 jsp 中的 include，可以通过 includes 包含，redis.conf 可以作为总文件，可以包含其他文件，即 **多实例的情况可以把公用的配置文件提取出来**。
+类似 jsp 中的 include，可以通过 includes 包含其他文件，redis.conf 可以作为总文件，可以包含其他文件，即 **多实例的情况可以把公用的配置文件提取出来**。
 
 ## NETWORK网络配置
 
@@ -68,7 +66,7 @@ port 6379 # 默认端口
 
 设置 tcp 的 backlog。backlog 其实是一个连接队列，backlog 队列总和 = 未完成三次握手队列 + 已经完成三次握手队列。
 
-在高并发环境下你需要一个高 backlog 值来避免慢客户端连接问题。
+在高并发环境下需要一个高 backlog 值来避免慢客户端连接问题。
 
 注意 Linux 内核会将这个值减小到 `/proc/sys/net/core/somaxconn` 的值（128），所以需要确认增大 `/proc/sys/net/core/somaxconn` 和 `/proc/sys/net/ipv4/tcp_max_syn_backlog（128）` 两个值来达到想要的效果。
 
@@ -118,7 +116,7 @@ port 6379 # 默认端口
 
 ### databases
 
-设定库的数量 默认 16，默认数据库为 0，可以使用 `SELECT <dbid>`命令在连接上指定数据库 id。
+设定库的数量 默认 16，默认数据库为 0，可以使用 `SELECT <dbid>` 命令在连接上指定数据库 id。
 
 ![image-20211226152312056](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Redis/20211226152312.png)
 
@@ -215,9 +213,9 @@ requirepass "123456"
 
 ### maxclients
 
-设置 redis 同时可以与多少个客户端进行连接。
+设置 Redis 同时可以与多少个客户端进行连接。
 
-默认情况下为 10000 个客户端，如果达到了此限制，redis 则会拒绝新的连接请求，并且向这些连接请求方发出 `max number of clients reached` 以作回应。
+默认情况下为 10000 个客户端，如果达到了此限制，Redis 则会拒绝新的连接请求，并且向这些连接请求方发出 `max number of clients reached` 以作回应。
 
 ![image-20211226154001167](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Redis/20211226154101.png)
 
@@ -225,11 +223,11 @@ requirepass "123456"
 
 ### maxmemory
 
-建议必须设置，否则，将内存占满，造成服务器宕机，设置 redis 可以使用的内存量。一旦到达内存使用上限，redis 将会试图移除内部数据，移除规则可以通过 maxmemory-policy 来指定。
+建议必须设置，否则，将内存占满，造成服务器宕机，设置 Redis 可以使用的内存量。一旦到达内存使用上限，Redis 将会试图移除内部数据，移除规则可以通过 maxmemory-policy 来指定。
 
-如果 redis 无法根据移除规则来移除内存中的数据，或者设置了「不允许移除」， 那么 redis 则会针对那些需要申请内存的指令返回错误信息，比如 SET、LPUSH 等。
+如果 Redis 无法根据移除规则来移除内存中的数据，或者设置了「不允许移除」，那么 Redis 则会针对那些需要申请内存的指令返回错误信息，比如 SET、LPUSH 等。
 
-但是对于无内存申请的指令，仍然会正常响应，比如 GET 等。如果你的 redis 是主 redis（说明你的 redis 有从 redis），那么在设置内存使用上限时，需要在系统中留出一些内存空间给同步队列缓存，只有在你设置的是「不移除」的情况下，才不用考虑这个因素。
+但是对于无内存申请的指令，仍然会正常响应，比如 GET 等。如果你的 Redis 是主 Redis（说明你的 Redis 有从 Redis），那么在设置内存使用上限时，需要在系统中留出一些内存空间给同步队列缓存，只有在你设置的是「不移除」的情况下，才不用考虑这个因素。
 
 ![image-20211226153944767](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Redis/20211226153945.png)
 
@@ -239,7 +237,7 @@ requirepass "123456"
 
 - volatile-lru：利用 LRU 算法移除设置过过期时间的 key
 
-- allkeys-lru： 用 lru 算法删除 key
+- allkeys-lru： 用 LRU 算法删除 key
 
 - volatile-random：随机删除即将过期 key
 
@@ -275,7 +273,7 @@ maxmemory-policy noeviction # 内存达到限制值的处理策略
 
 ![image-20211226154205172](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Redis/20211226154205.png)
 
-## append only模式 
+## appendonly模式 
 
 AOF 相关部分
 
