--- a/docs/20.数据库/10.缓存数据库 - Redis/14.Redis - Java整合.md
+++ b/docs/20.数据库/10.缓存数据库 - Redis/14.Redis - Java整合.md
@@ -262,7 +262,7 @@ public class TestSet {
 }
 ```
 
-对Hash的操作命令
+对 Hash 的操作命令
 
 ```java
 public class TestHash {
@@ -274,14 +274,14 @@ public class TestHash {
         map.put("key2", "value2");
         map.put("key3", "value3");
         map.put("key4", "value4");
-        //添加名称为hash（key）的hash元素
+        // 添加名称为 hash（key）的hash元素
         jedis.hmset("hash", map);
-        //向名称为hash的hash中添加key为key5，value为value5元素
+        // 向名称为 hash 的 hash 中添加 key 为 key5，value 为 value5 元素
         jedis.hset("hash", "key5", "value5");
-        System.out.println("散列hash的所有键值对为：" + jedis.hgetAll("hash"));//return Map<String,String>
+        System.out.println("散列hash的所有键值对为：" + jedis.hgetAll("hash")); // return Map<String,String>
 
-        System.out.println("散列hash的所有键为：" + jedis.hkeys("hash"));//returnSet<String>
-        System.out.println("散列hash的所有值为：" + jedis.hvals("hash"));//returnList<String>
+        System.out.println("散列hash的所有键为：" + jedis.hkeys("hash")); // returnSet<String>
+        System.out.println("散列hash的所有值为：" + jedis.hvals("hash")); // returnList<String>
         System.out.println("将key6保存的值加上一个整数，如果key6不存在则添加key6：" + jedis.hincrBy("hash", "key6", 6));
         System.out.println("散列hash的所有键值对为：" + jedis.hgetAll("hash"));
         System.out.println("将key6保存的值加上一个整数，如果key6不存在则添加key6：" + jedis.hincrBy("hash", "key6", 3));
@@ -293,7 +293,6 @@ public class TestHash {
         System.out.println("判断hash中是否存在key3：" + jedis.hexists("hash", "key3"));
         System.out.println("获取hash中的值：" + jedis.hmget("hash", "key3"));
         System.out.println("获取hash中的值：" + jedis.hmget("hash", "key3", "key4"));
-
     }
 }
 ```
@@ -351,7 +350,7 @@ public class RedisCode {
         verifyCode(phone,"14175");
     }
     
-    // 1. 输入手机号，随机生成6位数字验证码，2分钟有效，存入redis
+    // 1. 输入手机号，随机生成 6 位数字验证码，2 分钟有效，存入redis
     public static String getCode(String phone){
         Random random = new Random();
         StringBuilder sb = new StringBuilder();
@@ -359,15 +358,15 @@ public class RedisCode {
             int code = random.nextInt(10);
             sb.append(code);
         }
-        jedis.setex("phone:" + phone + ":code", 120,sb.toString());
+        jedis.setex("phone:" + phone + ":code", 120, sb.toString());
         jedis.setex("phone:" + phone + ":count", 120, "0");
         return sb.toString();
         
     }
     
-    // 2. 输入验证码，去redis获取进行比对，返回结果
+    // 2. 输入验证码，去 Redis 获取进行比对，返回结果
     public static void verifyCode(String phone,String code){
-        // 获取code
+        // 获取 code
         String phoneCode = jedis.get("phone:" + phone + ":code");
         String count = jedis.get("phone:" + phone + ":count");
         // 比较验证次数
@@ -388,8 +387,6 @@ public class RedisCode {
     }       
 }
 ```
-
-
 
 ## SpringBoot整合
 
@@ -534,11 +531,11 @@ public class RedisConfig extends CachingConfigurerSupport {
         om.enableDefaultTyping(ObjectMapper.DefaultTyping.NON_FINAL);
         jackson2JsonRedisSerializer.setObjectMapper(om);
         template.setConnectionFactory(factory);
-        //key 序列化方式
+        // key 序列化方式
         template.setKeySerializer(redisSerializer);
-        //value 序列化
+        // value 序列化
         template.setValueSerializer(jackson2JsonRedisSerializer);
-        //value hashmap 序列化
+        // value hashmap 序列化
         template.setHashValueSerializer(jackson2JsonRedisSerializer);
         return template;
     }
@@ -548,7 +545,7 @@ public class RedisConfig extends CachingConfigurerSupport {
         RedisSerializer<String> redisSerializer = new StringRedisSerializer();
         Jackson2JsonRedisSerializer jackson2JsonRedisSerializer = new
                 Jackson2JsonRedisSerializer(Object.class);
-        //解决查询缓存转换异常的问题
+        // 解决查询缓存转换异常的问题
         ObjectMapper om = new ObjectMapper();
         om.setVisibility(PropertyAccessor.ALL, JsonAutoDetect.Visibility.ANY);
         om.enableDefaultTyping(ObjectMapper.DefaultTyping.NON_FINAL);
@@ -591,11 +588,9 @@ public class RedisTest {
 }
 ```
 
-
-
 ### Redis工具类
 
-使用 RedisTemplate 需要频繁调用 `.opForxxx` 然后才能进行对应的操作，这样使用起来代码效率低下，工作中一般不会这样使用，而是将这些常用的公共 API 抽取出来封装成为一个工具类，然后直接使用工具类来间接操作 Redis,不但效率高并且易用。
+使用 RedisTemplate 需要频繁调用 `.opForxxx` 然后才能进行对应的操作，这样使用起来代码效率低下，工作中一般不会这样使用，而是将这些常用的公共 API 抽取出来封装成为一个工具类，然后直接使用工具类来间接操作 Redis，不但效率高并且易用。
 
 代码很长，我稍微隐藏
 
