--- a/docs/20.数据库/10.缓存数据库 - Redis/20.Redis - 主从复制.md
+++ b/docs/20.数据库/10.缓存数据库 - Redis/20.Redis - 主从复制.md
@@ -26,9 +26,9 @@ tags:
 
 ![image-20211226204935748](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Redis/20211226205002.png)
 
-主从复制，是指将一台 Redis 服务器的数据，复制到其他的 Redis 服务器。前者称为主节点 (master/leader)，后者称为从节点(slave/follower)；数据的复制是单向的，只能由主节点到从节点。**Master 以写为主，Slave 以读为主**。
+主从复制，是指将一台 Redis 服务器的数据，复制到其他的 Redis 服务器。前者称为主节点（master/leader），后者称为从节点（slave/follower）；数据的复制是单向的，只能由主节点到从节点。**Master 以写为主，Slave 以读为主**。
 
-默认情况下，每台 Redis 服务器都是主节点；且一个主节点可以有多个从节点(或没有从节点)，但一个从节点只能有一个主节点。
+默认情况下，每台 Redis 服务器都是主节点；且一个主节点可以有多个从节点（或没有从节点），但一个从节点只能有一个主节点。
 
 主从复制的作用主要包括：
 
@@ -40,13 +40,11 @@ tags:
 
 - 高可用基石：除了上述作用以外，主从复制还是哨兵和集群能够实施的基础，因此说主从复制是 Redis 高可用的基础
 
-
-
 一般来说，要将 Redis 运用于工程项目中，只使用一台 Redis 是万万不能的，原因如下：
 
-- 从结构上，单个 Redis 服务器会发生单点故障，并且一台服务器需要处理所有的请求负载，压力较大；
+- 从结构上，单个 Redis 服务器会发生单点故障，并且一台服务器需要处理所有的请求负载，压力较大
 
-- 从容量上，单个 Redis 服务器内存容量有限，就算一台 Redis 服务器内存容量为 256G，也不能将所有内存用作 Redis 存储内存，一般来说，单台 Redis 最大使用内存不应该超过 20G。
+- 从容量上，单个 Redis 服务器内存容量有限，就算一台 Redis 服务器内存容量为 256G，也不能将所有内存用作 Redis 存储内存，一般来说，单台 Redis 最大使用内存不应该超过 20G
 
 电商网站上的商品，一般都是一次上传，无数次浏览的，说专业点也就是「多读少写」。
 
@@ -137,7 +135,7 @@ protected-mode no
 dir "/myredis"  # 备份文件路径，自定义
 ```
 
-二仆的文件（redis80.conf、redis81.conf）
+二从的文件（redis80.conf、redis81.conf）
 
 ```sh
 include /etc/redis.conf    # 核心配置文件
@@ -205,32 +203,7 @@ dir "/myredis"  # 备份文件路径，自定义
 
 当主机断电宕机后，默认情况下从机的角色不会发生变化，集群中只是失去了写操作，当主机恢复以后，又会连接上从机恢复原状。
 
-当从机断电宕机后，若不是使用配置文件配置的从机，再次启动后作为主机是无法获取之前主机的数据的，若此时重新配置称为从机，又可以获取到主机的所有数据。这里就要提到一个同步原理。
-
-有两种方式可以产生新的主机：看下文「反客为主」
-
-### 薪火相传
-
-上一个 Slave 可以是下一个 Slave 和 Master，Slave 同样可以接收其他 Slaves 的连接和同步请求，那么该 Slave 作为了链条中下一个的 Master，可以有效减轻 Master 的写压力，去中心化降低风险。
-
-![image-20211226210450248](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Redis/20211226210451.png)
-
-在一个从机用 `slaveof <ip> <port>` 指令连接另一个从机。
-
-![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Redis/20211226210356.png)
-
-![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Redis/20211226210314.png)
-
-
-
-### 反客为主
-
-当一个 master 宕机后，后面的 slave 可以立刻升为 master，其后面的 slave 不用做任何修改。
-
-有两种方式可以产生新的主机：
-
-- 从机手动执行命令 `slaveof no one`，这样执行以后从机会独立出来成为一个主机
-- 使用哨兵模式（自动选举）
+当从机断电宕机后，若不是使用配置文件配置的从机，再次启动后作为主机是无法获取之前主机的数据的，若此时重新配置称为从机，又可以获取到主机的所有数据。这里就要提到一个复制原理。
 
 > **复制原理**
 
@@ -246,6 +219,31 @@ dir "/myredis"  # 备份文件路径，自定义
 
 ![image-20211226210814480](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Redis/20211226210815.png)
 
+有两种方式可以产生新的主机：看下文「反客为主」
+
+### 薪火相传
+
+上一个 Slave 可以是下一个 Slave 和 Master，Slave 同样可以接收其他 Slaves 的连接和同步请求，那么该 Slave 作为了链条中下一个的 Master，可以有效减轻 Master 的写压力，去中心化降低风险。
+
+![image-20211226210450248](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Redis/20211226210451.png)
+
+在一个从机用 `slaveof <ip> <port>` 指令连接另一个从机。
+
+![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Redis/20211226210356.png)
+
+![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Redis/20211226210314.png)
+
+或者在配置文件里找到 `slaveof <ip> <port>` 指令进行配置。
+
+### 反客为主
+
+当一个 master 宕机后，后面的 slave 可以立刻升为 master，其后面的 slave 不用做任何修改。
+
+有两种方式可以产生新的主机：
+
+- 从机手动执行命令 `slaveof no one`，这样执行以后从机会独立出来成为一个主机
+- 使用哨兵模式（自动选举）
+
 ## 哨兵模式
 
 ### 什么是哨兵模式
@@ -260,14 +258,52 @@ dir "/myredis"  # 备份文件路径，自定义
 
 这里的哨兵有两个作用：
 
-- 通过发送命令，让 Redis 服务器返回监控其运行状态，包括主服务器和从服务器
+- 通过发送 ` Info Replication` 命令，让 Redis 服务器返回监控其运行状态，包括主服务器和从服务器
 - 当哨兵监测到 Master 宕机，会自动将 Slave 切换成 Master，然后通过 **发布订阅模式** 通知其他的从服务器，修改配置文件，让它们切换主机
 
 然而一个哨兵进程对 Redis 服务器进行监控，可能会出现问题，为此，我们可以使用多个哨兵进行监控。各个哨兵之间还会进行监控，这样就形成了多哨兵模式。
 
 ![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Redis/20211226211245.png)
 
-假设主服务器宕机，哨兵 1 先检测到这个结果，系统并不会马上进行 failover 过程，仅仅是哨兵 1 主观的认为主服务器不可用，这个现象成为 **主观下线**。当后面的哨兵也检测到主服务器不可用，并且数量达到一定值时，那么哨兵之间就会进行一次投票，投票的结果由一个哨兵发起，进行 failover [故障转移]操作。切换成功后，就会通过发布订阅模式，让各个哨兵把自己监控的从服务器实现切换主机，这个过程称为 **客观下线**。
+假设主服务器宕机，哨兵 1 先检测到这个结果，系统并不会马上进行 failover（故障转移）过程，仅仅是哨兵 1 主观的认为主服务器不可用，这个现象成为 **主观下线**。当后面的哨兵也检测到主服务器不可用，并且数量达到一定值时，那么哨兵之间就会进行一次投票，投票的结果由一个哨兵发起，进行 failover（故障转移）操作。切换成功后，就会通过发布订阅模式，让各个哨兵把自己监控的从服务器实现切换主机，这个过程称为 **客观下线**。
+
+哨兵监控主机命令：`sentinel monitor <master-name> <ip> <port> <count>`。
+
+监控主节点的名字（自定义一个名字）、IP 和端口，最后一个 count 的意思是有几台 Sentinel 发现有问题，就会发生故障转移，例如配置为 2，代表至少有 2 个 Sentinel 节点认为主节点不可达，那么这个不可达的判定才是客观的。对于设置的越小，那么达到下线的条件越宽松，反之越严格。**一般建议将其设置为 Sentinel 节点的一半加 1**，count 不得大于 Sentinel 的个数。
+
+### 集群脑裂
+
+脑裂，也就是说，某个 Master 所在机器突然脱离了正常的网络，跟其它 Slave 机器不能连接，但是实际上 Master 还运行着。
+
+> 造成的问题
+
+此时哨兵可能就会认为 Master 宕机了，然后开始选举，让其它 Slave 切换成 Master。这时候集群里就会有 2 个 Master，也就是所谓的脑裂。此时虽然某个 Slave 被切换成了 Master，但是可能 Client 还没来得及切换成新的 Master，还继续写向旧的 Master，这样数据可能就丢失了。因此旧 Master 再次恢复的时候，会被作为一个 Slave 挂到新的 Master 上去，自己的数据会被清空，重新从新的 Master 复制数据。
+
+> 解决
+
+在配置文件添加（模板）：
+
+```java
+min-slaves-to-write 1
+
+min-slaves-max-lag 10
+```
+
+- 要求至少有 1 个 Slave，数据复制和同步的延迟不能超过 10 秒
+
+- 如果说一旦所有的 Slave，数据复制和同步的延迟都超过了 10 秒钟，那么这个时候，Master 就不会再接收任何请求了
+
+上面两个配置可以减少 **异步复制** 和 **脑裂导致** 的数据丢失。
+
+原理：正常的 Slave 从 Master 复制数据，除了刚开始启动时需要全部复制，其他时候都是复制新的数据（增量复制），耗时少，一旦出现复制时间很长，则代表该 Slave 是刚启动的，非常有可能是旧的 Master 宕机重新启动，所以通过复制超时时间来判断是否是异步复制或者脑裂导致。
+
+> 异步复制导致的数据丢失
+
+在异步复制的过程当中，通过 `min-slaves-max-lag` 这个配置，就可以确保的说，一旦 Slave 复制数据和 ack 延迟时间太长，就认为可能 Master 宕机后损失的数据太多了，那么就拒绝写请求，这样就可以把 Master 宕机时由于部分数据未同步到 Slave 导致的数据丢失降低到可控范围内。
+
+> 集群脑裂导致的数据丢失
+
+集群脑裂因为 Client 还没来得及切换成新的 Master，还继续写向旧的 Master，这样数据可能就丢失了，通过 `min-slaves-to-write` 确保必须是有多少个从节点连接，并且延迟时间小于 `min-slaves-max-lag` 多少秒。
 
 ### 配置测试
 
@@ -324,7 +360,7 @@ dir "/myredis"  # 备份文件路径，自定义
 
 缺点：
 
-1. Redis不好在线扩容，集群容量一旦达到上限，在线扩容就十分麻烦
+1. Redis 不好在线扩容，集群容量一旦达到上限，在线扩容就十分麻烦
 2. 实现哨兵模式的配置其实是很麻烦的，里面有很多配置项
 
 > 哨兵模式的全部配置
@@ -341,7 +377,7 @@ port 26379
 dir /tmp
  
 # 哨兵 sentinel 监控的 redis 主节点的 ip port 
-# master-name：可以自己命名的主节点名字 只能由字母 A-z、数字 0-9 、这三个字符 ".-_" 组成。
+# master-name：自定义命名的主节点名字 只能由字母 A-z、数字 0-9 、这三个字符 ".-_" 组成。
 # quorum：当这些 quorum 个数 sentinel 哨兵认为 Master 主节点失联 那么这时客观上认为主节点失联了
 # sentinel monitor <master-name> <ip> <redis-port> <quorum>
 sentinel monitor mymaster 127.0.0.1 6379 1
@@ -409,23 +445,24 @@ sentinel client-reconfig-script mymaster /var/redis/reconfig.sh
 开启哨兵后，Java 获取哨兵的代码：
 
 ```java
-private static JedisSentinelPool jedisSentinelPool=null;
-public static Jedis getJedisFromSentinel(){
-    if(jedisSentinelPool == null){
-    	Set<String> sentinelSet = new HashSet<>();
-        
-    	sentinelSet.add("192.168.11.103:26379"); // 指定哨兵的ip和端口
-    	JedisPoolConfig jedisPoolConfig = new JedisPoolConfig();
-    	jedisPoolConfig.setMaxTotal(10); //最大可用连接数
-    	jedisPoolConfig.setMaxIdle(5); //最大闲置连接数
-    	jedisPoolConfig.setMinIdle(5); //最小闲置连接数
-    	jedisPoolConfig.setBlockWhenExhausted(true); //连接耗尽是否等待
-    	jedisPoolConfig.setMaxWaitMillis(2000); //等待时间
-    	jedisPoolConfig.setTestOnBorrow(true); //取连接的时候进行一下测试 ping pong
-    	jedisSentinelPool = new JedisSentinelPool("mymaster",sentinelSet,jedisPoolConfig);
-    	return jedisSentinelPool.getResource();
-    }else{
-    	return jedisSentinelPool.getResource();
+public class RedisSentinel {
+    private static JedisSentinelPool jedisSentinelPool = null;
+    public static Jedis getJedisFromSentinel(){
+        if(jedisSentinelPool == null){
+            Set<String> sentinelSet = new HashSet<>();
+            sentinelSet.add("192.168.11.103:26379"); // 指定哨兵的 ip 和端口
+            JedisPoolConfig jedisPoolConfig = new JedisPoolConfig();
+            jedisPoolConfig.setMaxTotal(10); // 最大可用连接数
+            jedisPoolConfig.setMaxIdle(5); // 最大闲置连接数
+            jedisPoolConfig.setMinIdle(5); // 最小闲置连接数
+            jedisPoolConfig.setBlockWhenExhausted(true); // 连接耗尽是否等待
+            jedisPoolConfig.setMaxWaitMillis(2000); // 等待时间
+            jedisPoolConfig.setTestOnBorrow(true); // 去连接的时候进行一下测试 ping pong
+            jedisSentinelPool = new JedisSentinelPool("mymaster",sentinelSet,jedisPoolConfig);
+            return jedisSentinelPool.getResource();
+        }else{
+            return jedisSentinelPool.getResource();
+        }
     }
 }
 ```
