--- a/docs/20.数据库/10.缓存数据库 - Redis/26.Redis - 分布式锁.md
+++ b/docs/20.数据库/10.缓存数据库 - Redis/26.Redis - 分布式锁.md
@@ -24,7 +24,7 @@ tags:
 
 ## 问题描述
 
-随着业务发展的需要，原单体单机部署的系统被演化成分布式集群系统后，由于分布式系统多线程、多进程并且分布在不同机器上，这将使原单机部署情况下的并发控制锁策略失效，单纯的 Java API 并不能提供分布式锁的能力。为了解决这个问题就 需要一种跨 JVM 的互斥机制来控制共享资源的访问，这就是分布式锁要解决的问题。
+随着业务发展的需要，原单体单机部署的系统被演化成分布式集群系统后，由于分布式系统多线程、多进程并且分布在不同机器上，这将使原单机部署情况下的并发控制锁策略失效，单纯的 Java API 并不能提供分布式锁的能力。为了解决这个问题就需要一种跨 JVM 的互斥机制来控制共享资源的访问，这就是分布式锁要解决的问题。
 
 分布式锁主流的实现方案： 
 
@@ -36,7 +36,7 @@ tags:
 
 每一种分布式锁解决方案都有各自的优缺点：
 
-- 性能：redis 最高
+- 性能：Redis 最高
 
 - 可靠性：zookeeper 最高
 
@@ -246,7 +246,7 @@ ab -n 1000 -c 100 http://192.168.199.1:8080/test/testLock
 
 
 
-出现的问题：setnx 刚好获取到锁，业务逻辑出现异常，导致锁无法释放，卡死。
+可能出现的问题：setnx 刚好获取到锁，业务逻辑出现异常 Exception，导致锁无法释放，卡死。
 
 解决：设置过期时间，自动释放锁。
 
@@ -254,7 +254,7 @@ ab -n 1000 -c 100 http://192.168.199.1:8080/test/testLock
 
 设置过期时间有两种方式：
 
-- 首先想到通过 expire 设置过期时间（缺乏原子性：如果在 setnx 和 expire 之 间出现异常，锁也无法释放）
+- 首先想到通过 expire 设置过期时间（缺乏原子性：如果在 setnx 和 expire 之间出现异常，锁也无法释放）
 - 在 set 时指定过期时间（推荐）
 
 ![image-20211226235800445](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Redis/20211226235802.png)
@@ -271,7 +271,7 @@ public class RedisLocked {
     @GetMapping("testLock1")
     public void testLock(){
         // 1 获取锁，setne
-        Boolean lock = redisTemplate.opsForValue().setIfAbsent("lock", "111", 3, TimeUnit.SECONDS);
+        Boolean lock = redisTemplate.opsForValue().setIfAbsent("lock", "111", 2, TimeUnit.SECONDS);
         // 2 获取锁成功、查询 num 的值
         if(lock){
             Object value = redisTemplate.opsForValue().get("num");
@@ -298,9 +298,9 @@ public class RedisLocked {
 }
 ```
 
-出现的问题：如果业务 1 操作卡顿 3 秒，而锁是 2 秒过期，导致 2 秒后其他进程拿到锁，而再过 1 秒后业务 1 释放锁，却是其他进程拿的锁
+出现的问题：如果线程 1 持有锁，但是操作卡顿 3 秒，而锁是 2 秒过期，导致 2 秒后线程 2 拿到锁，当线程 2 拿到锁时，再过 1 秒后线程 1 才释放锁，也就是释放了进程 2 拿的锁。
 
-解决：setnx 获取锁时，设置一个指定的唯一值（例如：uuid）；释放前获取这 个值，判断是否自己的锁
+解决：setnx 获取锁时，设置一个指定的唯一值（例如：uuid）；释放前获取这个值，判断是否自己的锁。
 
 ### 优化之UUID防误删
 
