--- a/docs/20.数据库/15.搜索数据库 - ElasticSearch/26.ElasticSearch - 冲突问题处理.md
+++ b/docs/20.数据库/15.搜索数据库 - ElasticSearch/26.ElasticSearch - 冲突问题处理.md
@@ -97,15 +97,13 @@ Elasticsearch 是分布式的。当文档创建、更新或删除时，新版本
 
 ## 外部系统版本控制
 
-一个常见的设置是使用其它数据库作为主要的数据存储，使用 Elasticsearch 做数据检索，这意味着主数据库的所有更改发生时都需要被复制到 Elasticsearch，如果多个进程负责这一数据同步，你可能遇到类似于之前描述的并发问题
+一个常见的设置是使用其它数据库作为主要的数据存储，使用 Elasticsearch 做数据检索，这意味着主数据库的所有更改发生时都需要被复制到 Elasticsearch，如果多个进程负责这一数据同步，你可能遇到类似于之前描述的并发问题。
 
 如果你的主数据库已经有了版本号或一个能作为版本号的字段值比如时间戳 timestamp，那么你就可以在 Elasticsearch 中通过增加 `version_type=external` 到查询字符串的方式重用这些相同的版本号，版本号必须是大于零的整数，且小于 9.2E+18，它是 Java 中一个 long 类型的正值。
 
 外部版本号的处理方式和我们之前讨论的内部版本号的处理方式有些不同，Elasticsearch 不是检查当前 _version 和 url 请求中指定的版本号是否相同，而是检查当前 _version 是否「小于」url 指定的版本号。如果请求成功，外部的版本号作为文档的新 _version 进行存储。
 
 如图当前 _version 版本是 3
-
-
 
 ![image-20211117124150610](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/ElasticSearch/20211117124154.png)
 
