--- a/docs/20.数据库/15.搜索数据库 - ElasticSearch/40.ElasticSearch - 面试题.md
+++ b/docs/20.数据库/15.搜索数据库 - ElasticSearch/40.ElasticSearch - 面试题.md
@@ -89,7 +89,7 @@ tags:
 - 不要随意修改垃圾回收器（CMS）和各个线程池的大小
 - 把你的内存的（少于）一半给 Lucene（但不要超过 32GB），通过 ES_HEAP_SIZE 环境变量设置
 - 内存交换到磁盘对服务器性能来说是致命的。如果内存交换到磁盘上，一个 100 微秒的操作可能变成 10 毫秒。 再想想那么多 10 微秒的操作时延累加起来。 不难看出 swapping 对于性能是多么可怕
-- Lucene 使用了大量的文件。同时，Elasticsearch 在节点和 HTTP 客户端之间进行通信也使用了大量的套接字。 所有这一切都需要足够的文件描述符。你应该增加你的文件描述符，设置一个很大的值，如 64000。
+- Lucene 使用了大量的文件。同时，Elasticsearch 在节点和 HTTP 客户端之间进行通信也使用了大量的套接字。 所有这一切都需要足够的文件描述符。你应该增加你的文件描述符，设置一个很大的值，如 64000
 
 > **补充：索引阶段性能提升方法**
 
@@ -139,7 +139,7 @@ Trie 的核心思想是空间换时间，利用字符串的公共前缀来降低
 
 ## Elasticsearch中的集群、节点、索引、文档、类型是什么？
 
-- 集群是一个或多个节点（服务器）的集合，它们共同保存您的整个数据，并提供跨所有节点的联合索引和搜索功能。群集由唯一名称标识，默认情况下为“elasticsearch”。此名称很重要，因为如果节点设置为按名称加入群集，则该节点只能是群集的一部分
+- 集群是一个或多个节点（服务器）的集合，它们共同保存您的整个数据，并提供跨所有节点的联合索引和搜索功能。群集由唯一名称标识，默认情况下为 elasticsearch。此名称很重要，因为如果节点设置为按名称加入群集，则该节点只能是群集的一部分
 - 节点是属于集群一部分的单个服务器。它存储数据并参与群集索引和搜索功能
 - 索引就像关系数据库中的「数据库」。它有一个定义多种类型的映射。索引是逻辑名称空间，映射到一个或多个主分片，并且可以有零个或多个副本分片。 MySQL => 数据库 Elasticsearch => 索引
 - 文档类似于关系数据库中的一行。不同之处在于索引中的每个文档可以具有不同的结构（字段），但是对于通用字段应该具有相同的数据类型。 MySQL => Databases => Tables => Columns / Rows Elasticsearch => Indices => Types => 具有属性的文档
@@ -147,5 +147,5 @@ Trie 的核心思想是空间换时间，利用字符串的公共前缀来降低
 
 ## Elasticsearch中的倒排索引是什么？
 
-倒排索引是搜索引擎的核心。搜索引擎的主要目标是在查找发生搜索条件的文档时提供快速搜索。ES 中的倒排索引其实就是 lucene 的倒排索引，区别于传统的正向索引，倒排索引会再存储数据时将关键词和数据进行关联，保存到倒排表中，然后查询时，将查询内容进行分词后在倒排表中进行查询，最后匹配数据即可。
+倒排索引是搜索引擎的核心。搜索引擎的主要目标是在查找发生搜索条件的文档时提供快速搜索。ES 中的倒排索引其实就是 lucene 的倒排索引，区别于传统的正向索引，倒排索引会在存储数据时将关键词和数据进行关联，保存到倒排表中，然后查询时，将查询内容进行分词后在倒排表中进行查询，最后匹配数据即可。
 
