--- a/docs/30.框架/50.高性能服务器 - Nginx/05.Nginx - 基础指令.md
+++ b/docs/30.框架/50.高性能服务器 - Nginx/05.Nginx - 基础指令.md
@@ -84,14 +84,14 @@ Nginx 的进程模型，我们可以通过下图来说明下：
 
 （2）信号（signal）
 
-| 信号     | 作用                                                       |
-| -------- | ---------------------------------------------------------- |
-| TERM/INT | 立即关闭整个服务（关闭 Nginx）                             |
-| QUIT     | 「优雅」的关闭整个服务（关闭 Nginx）                       |
-| HUP      | 重读配置文件并使用服务对新配置项生效（重启 Nginx）         |
-| USR1     | 重新打开日志文件，可以用来进行日志切割（重启日志）         |
-| USR2     | 平滑升级到最新版的nginx                                    |
-| WINCH    | 所有子进程不在接收处理新连接，相当于给work进程发送QUIT指令 |
+| 信号     | 作用                                                         |
+| -------- | ------------------------------------------------------------ |
+| TERM/INT | 立即关闭整个服务（关闭 Nginx）                               |
+| QUIT     | 「优雅」的关闭整个服务（关闭 Nginx）                         |
+| HUP      | 重读配置文件并使用服务对新配置项生效（重启 Nginx）           |
+| USR1     | 重新打开日志文件，可以用来进行日志切割（重启日志）           |
+| USR2     | 平滑升级到最新版的 Nginx                                     |
+| WINCH    | 所有子进程不在接收处理新连接，相当于给 Work 进程发送 QUIT 指令 |
 
 调用命令为 `kill -signal PID`
 
@@ -194,7 +194,7 @@ kill -WINCH `cat /usr/local/nginx/logs/nginx.pid`
 | -q       | 在配置测试期间过滤掉非错误消息                               |
 | -s       | signal 信号，后面的命令和服务信号控制功能类似：<br /><br />`stop`：快速关闭，类似于 TERM/INT 信号的作用<br />`quit`：优雅的关闭，类似于 QUIT 信号的作用 <br />`reopen`：重新打开日志文件类似于 USR1 信号的作用 <br />`reload`：重启 Nginx，类似于 HUP 信号的作用 |
 | -p       | prefix，指定 Nginx 的默认安装路径，(默认为：/usr/local/nginx/) |
-| -c       | filename,指定 Nginx 的配置文件路径,(默认为：conf/nginx.conf) |
+| -c       | filename，指定 Nginx 的配置文件路径,(默认为：conf/nginx.conf) |
 | -g       | 用来补充 Nginx 配置文件，向 Nginx 服务指定启动时应用全局的配置 |
 
 > **例子**
@@ -287,13 +287,13 @@ kill -WINCH `cat /usr/local/nginx/logs/nginx.pid`
     nginx: configuration file /opt/nginx.conf test failed
     ```
 
-    说明指定配置文件目录生效。
+    说明指定配置文件目录生效，只是文件内容语法不对。
 
 ## 版本升级和新增模块
 
 如果想对 Nginx 的版本进行更新，或者要应用一些新的模块，最简单的做法就是停止当前的 Nginx 服务，然后开启新的 Nginx 服务。但是这样会导致在一段时间内，用户是无法访问服务器。为了解决这个问题，我们就需要用到 Nginx 服务器提供的平滑升级功能。这个也是 Nginx 的一大特点，使用这种方式，就可以使 Nginx 在 7 * 24 小时不间断的提供服务了。接下来我们分析下需求：
 
-> 需求：Nginx 的版本最开始使用的是 Nginx-1.14.2,由于服务升级，需要将 Nginx 的版本升级到 Nginx-1.16.1,要求 Nginx 不能中断提供服务。
+> 需求：Nginx 的版本最开始使用的是 Nginx-1.14.2，由于服务升级，需要将 Nginx 的版本升级到 Nginx-1.16.1,要求 Nginx 不能中断提供服务。
 
 为了应对上述的需求，这里我们提供两种解决方案:
 
@@ -359,7 +359,7 @@ cd /usr/local/nginx/sbin
 mv nginx nginx.backup
 ```
 
-第二步:将 Nginx 1.16.1 安装目录编译后的 objs 目录下的 nginx 文件，拷贝到原来 `/usr/local/nginx/sbin` 目录下
+第二步：将 Nginx 1.16.1 安装目录编译后的 objs 目录下的 nginx 文件，拷贝到原来 `/usr/local/nginx/sbin` 目录下
 
 如果第一步没有备份，那么将会覆盖 1.14.2 的 nginx 文件
 
@@ -371,13 +371,13 @@ cd ~/nginx/core/nginx-1.16.1/objs
 cp nginx /usr/local/nginx/sbin
 ```
 
-第三步:发送信号 USR2 给 Nginx 的 1.14.2 版本对应的 master 进程
+第三步：发送信号 USR2 给 Nginx 的 1.14.2 版本对应的 master 进程
 
 ```sh
 kill -USR2 `cat /usr/local/logs/nginx.pid`
 ```
 
-第四步:发送信号 QUIT 给 Nginx 的 1.14.2 版本对应的 master 进程
+第四步：发送信号 QUIT 给 Nginx 的 1.14.2 版本对应的 master 进程
 
 ```sh
 kill -QUIT `cat /usr/local/logs/nginx.pid.oldbin`
