--- a/docs/30.框架/50.高性能服务器 - Nginx/11.Nginx - 静态资源部署.md
+++ b/docs/30.框架/50.高性能服务器 - Nginx/11.Nginx - 静态资源部署.md
@@ -210,9 +210,7 @@ server{
 
 ::: note 前段时间疑惑了，这里进行说明：server_name 配置了 localhost 和配置 IP 或者域名的区别
 
-localhost 是「虚拟 IP」，如果不是本机访问，而是外界访问，那么这个就是无效的，但是为什么学习阶段的时候都不改呢，因为当 Nginx 没有匹配到指定的 `server_name`，默认找到第一个 server 块，而 Nginx 默认的第一个 server 块就是 localhost，哪怕你把 localhost 改为其他的，如 hello，它也能访问。只是因为在匹配不到的情况下，默认是第一个 service 块，哪怕它确实和访问的IP不匹配。
-
-------
+localhost 是「虚拟 IP」，如果不是本机访问，而是外界访问，那么这个就是无效的，但是为什么学习阶段的时候都不改呢，因为当 Nginx 没有匹配到指定的 `server_name`，默认找到第一个 server 块，而 Nginx 默认的第一个 server 块就是 localhost，哪怕你把 localhost 改为其他的，如 hello，它也能访问。只是因为在匹配不到的情况下，默认是第一个 service 块，哪怕它确实和访问的 IP 不匹配。
 
 IP 如果和域名进行了绑定，那么在 `server_name` 中，两者都可以填写，填了域名，最后也是找到 IP，只是因为域名好记住。
 
@@ -514,7 +512,7 @@ location /images {
 
 - alias 的处理结果是：**使用 alias 路径替换 location 路径**，但是不会替换匹配后面的请求，即不会替换 /mv.png
 
-    `/usr/local/nginx/html/images`
+    `/usr/local/nginx/html/mv.png`
 
 需要在 alias 后面路径改为：
 
@@ -540,12 +538,12 @@ location /images/ {
 
 - root 的处理结果是: root 路径 + location 路径
 - alias 的处理结果是:使用 alias 路径替换 location 路径
-- alias 是一个目录别名的定义，root 则是最上层目录的含义。
+- alias 是一个目录别名的定义，root 则是最上层目录的含义
 - 如果 location 路径是以 / 结尾,则 alias 也必须是以 / 结尾，root 没有要求
     - **alias 不支持 location 的 =**
 
 
-这里再多言几句，alias 后指定的资源路径，Nginx 就会去这个路径下找资源，「忽略」location 本身的的请求，仅拼接 location 后面的请求。如果你想去嗲 location 本身，就用「绝对路径」alias。
+这里再多言几句，alias 后指定的资源路径，Nginx 就会去这个路径下找资源，「忽略」location 本身的的请求，仅拼接 location 后面的请求。如果你想去拼接 location 本身，就用绝对路径（包括 location）的alias。
 
 ### index指令
 
@@ -571,7 +569,7 @@ location / {
 
 ### error_page指令
 
-error_page 指令是设置网站的错误页面
+error_page 指令是设置网站的错误页面。
 
 | 语法                                                | 默认值 | 位置                          |
 | --------------------------------------------------- | ------ | ----------------------------- |
@@ -830,7 +828,7 @@ tcp_nodelay on;
 	
 	例如: 1024 / 10k | K / 10m | M
 	
-	Gzip 压缩功能对大数据的压缩效果明显，但是如果要压缩的数据比较小的化，可能出现越压缩数据量越大的情况，因此我们需要根据响应内容的大小来决定是否使用 Gzip 功能，响应页面的大小可以通过头信息中的 `Content-Length` 来获取。但是如何使用了 Chunk 编码动态压缩，该指令将被忽略。建议设置为 1K 或以上。
+	Gzip 压缩功能对大数据的压缩效果明显，但是如果要压缩的数据比较小的话，可能出现越压缩数据量越大的情况，因此我们需要根据响应内容的大小来决定是否使用 Gzip 功能，响应页面的大小可以通过头信息中的 `Content-Length` 来获取。但是如何使用了 Chunk 编码动态压缩，该指令将被忽略。建议设置为 1K 或以上。
 
 - `gzip_proxied` 指令设置是否对服务端返回的结果进行 Gzip 压缩
 
@@ -1004,7 +1002,7 @@ gzip jquery.js
 
 缓存（cache），原始意义是指访问速度比一般随机存取存储器（RAM）快的一种高速存储器，通常它不像系统主存那样使用 DRAM 技术，而使用昂贵但较快速的 SRAM 技术。缓存的设置是所有现代计算机系统发挥高性能的重要因素之一。
 
-Web 缓存是指一个 Web 资源（如 html 页面，图片，js，数据等）存在于 Web 服务器和客户端（浏览器）之间的副本。缓存会根据进来的请求保存输出内容的副本；当下一个请求来到的时候，如果是相同的 URL，缓存会根据缓存机制决定是直接使用副本响应访问请求，还是向源服务器再次发送请求。比较常见的就是浏览器会缓存访问过网站的网页，当再次访问这个 URL 地址的时候，如果网页没有更新，就不会再次下载网页，而是直接使用本地缓存的网页。只有当网站明确标识资源已经更新，浏览器才会再次下载网页
+Web 缓存是指一个 Web 资源（如 html 页面，图片，js，数据等）存在于 Web 服务器和客户端（浏览器）之间的副本。缓存会根据进来的请求保存输出内容的副本；当下一个请求来到的时候，如果是相同的 URL，缓存会根据缓存机制决定是直接使用副本响应访问请求，还是向源服务器再次发送请求。比较常见的就是浏览器会缓存访问过网站的网页，当再次访问这个 URL 地址的时候，如果网页没有更新，就不会再次下载网页，而是直接使用本地缓存的网页。只有当网站明确标识资源已经更新，浏览器才会再次下载网页。
 
 ### Web缓存的种类
 
