--- a/docs/30.框架/50.高性能服务器 - Nginx/15.Nginx - 反向代理.md
+++ b/docs/30.框架/50.高性能服务器 - Nginx/15.Nginx - 反向代理.md
@@ -40,7 +40,7 @@ Nginx 即可以实现正向代理，也可以实现反向代理。
 
 ```nginx
 http {
-  log_format main 'client send request=>clientIp=$remote_addr serverIp=$host';
+    log_format main 'client send request=>clientIp=$remote_addr serverIp=$host';
 	server{
 		listen 80;
 		server_name	localhost;
@@ -62,7 +62,7 @@ http {
 ```nginx
 server {
     listen  82;
-    resolver 8.8.8.8;   # 设置 DNS 的IP，用来解析 proxy_pass 中的域名
+    resolver 8.8.8.8;   # 设置 DNS 的 IP，用来解析 proxy_pass 中的域名
     location / {
         proxy_pass http://$host$request_uri;   # proxy_pass 实现正向代理
     }
@@ -71,7 +71,7 @@ server {
 
 `proxy_pass` 后面有讲解。
 
-（4）配置代理服务器的IP(192.168.200.146)和 Nginx 配置监听的端口(82)
+（4）配置代理服务器的 IP(192.168.200.146)和 Nginx 配置监听的端口(82)
 
 ![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Nginx/20211127233357.png)
 
@@ -181,11 +181,9 @@ server{
 # 第二个 proxy_pass 就变成了 http://localhost/index.html 效果就不一样了。
 ```
 
-- 第一个 location（第 4 行代码）：当客户端访问 `http://localhost/index.html`，两个 `proxy_pass` 效果是一样的
+- 第一个 location（第 4 行代码）：当客户端访问 `http://localhost/index.html`，两个 `proxy_pass` 效果是一样的，因为 location 后的 `/` 会添加在代理地址后面，所以有没有 `/`，效果都一样。
 
-    因为 location 后的 `/` 会添加在代理地址后面，所以有没有 `/`，效果都一样。
-
-- 第一个 location（第 14 行代码）：当客户端访问 `http://localhost/server/index.html`，这个时候，第一个 proxy_pass 就变成了 `http://localhost/server/index.html`，第二个 proxy_pass 就变成了 `http://localhost/index.html` 效果就不一样了
+- 第一个 location（第 14 行代码）：当客户端访问 `http://localhost/server/index.html`，这个时候，第一个 proxy_pass 就变成了 `http://192.168.200.146/server/index.html`，第二个 proxy_pass 就变成了 `http://192.168.200.146/index.html` 效果就不一样了
 
     如果不以 `/` 结尾，则 location 后的 `/server` 会添加在地址后面，所以第一个 proxy_pass 因为没有 `/` 结尾而被加上 `/server`，而第二个自带了 `/` ，所以不会添加 `/server`。
 
@@ -293,7 +291,7 @@ server {
 # 该 server 去请求服务器 B 的欢迎页面
 server {
 	listen  80;
-	server_name localhost;
+	server_name 192.168.200.133;
 	location / {
 		proxy_pass http://192.168.200.146;  # 4.重新发送请求给服务器 B，获取欢迎页面
 	}
@@ -341,7 +339,7 @@ server {
 
 ![1581883378672](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Nginx/20211128013511.png)
 
-服务器1,2,3存在两种情况
+服务器 1，2，3 存在两种情况
 
 - 第一种情况: 三台服务器的内容不一样
 
@@ -399,7 +397,7 @@ server {
     }
     ```
 
-- 如果服务器1、服务器2和服务器3的内容是一样的，该如何处理?
+- 如果服务器 1、服务器 2 和服务器 3 的内容是一样的，该如何处理?
 
     请看负载均衡的相关内容，里面将进行详细的介绍。
 
@@ -416,7 +414,7 @@ server {
 | 3    | /kele     | http://192.168.199.27/ | //kbt     |
 | 4    | /kele/    | http://192.168.199.27/ | /kbt      |
 
-若Nginx 会将原请求路径原封不动地转交给其他地址，如案例 3 和 4。
+若 Nginx 会将原请求路径原封不动地转交给其他地址，如案例 3 和 4。
 
 `proxy_pass` 的 ip:port 后加了 `/`，代表去除掉请求和 location 的匹配的字符串，不加则追加全部请求到地址后面。
 
@@ -861,7 +859,7 @@ ssl_certificate_key  /root/cert/server.key;
 
 ## 反向代理系统调优
 
-反向代理值 Buffer 和 Cache
+反向代理值 Buffer 和 Cache。
 
 Buffer 翻译过来是「缓冲」，Cache 翻译过来是「缓存」。
 
