--- a/docs/30.框架/50.高性能服务器 - Nginx/19.Nginx - 缓存集成.md
+++ b/docs/30.框架/50.高性能服务器 - Nginx/19.Nginx - 缓存集成.md
@@ -35,16 +35,16 @@ tags:
 | 操作系统磁盘缓存 | 减少磁盘机械操作         |
 | 数据库缓存       | 减少文件系统的IO操作     |
 | 应用程序缓存     | 减少对数据库的查询       |
-| Web服务器缓存    | 减少对应用服务器请求次数 |
+| Web 服务器缓存   | 减少对应用服务器请求次数 |
 | 浏览器缓存       | 减少与后台的交互次数     |
 
 缓存的优点
 
-- 减少数据传输，节省网络流量，加快响应速度，提升用户体验；
+- 减少数据传输，节省网络流量，加快响应速度，提升用户体验
 
-- 减轻服务器压力；
+- 减轻服务器压力
 
-- 提供服务端的高可用性；
+- 提供服务端的高可用性
 
 缓存的缺点
 
