--- a/docs/30.框架/50.高性能服务器 - Nginx/23.Nginx - 站点与认证.md
+++ b/docs/30.框架/50.高性能服务器 - Nginx/23.Nginx - 站点与认证.md
@@ -10,7 +10,7 @@ tags:
 
 ::: note 
 
-你一定看过很多的简易版下载网站并诞生出制作它的种子，也希望访问 Nginx 的时候，需要进行用户名和密码的验证。本内容将带大家学习如何利用 Nginx 制作下载站点以及访问 Nginx 的用户认证。
+你一定看过很多的简易版下载网站并诞生出制作它的想法，也希望访问 Nginx 的时候，需要进行用户名和密码的验证。本内容将带大家学习如何利用 Nginx 制作下载站点以及访问 Nginx 的用户认证。
 
 ::: right
 
@@ -138,7 +138,7 @@ tags:
     ```nginx
     location /download {
         root /opt;
-
+  
         if ($request_filename ~* ^.*?\.(txt|doc|pdf|rar|gz|zip|docx|exe|xlsx|ppt|pptx|conf)$){
 				  add_header Content-Disposition 'attachment;';
 			  }
