--- a/docs/40.工具/40.容器部署 - Docker/15.Docker - 数据卷.md
+++ b/docs/40.工具/40.容器部署 - Docker/15.Docker - 数据卷.md
@@ -109,7 +109,7 @@ docker exec -it tomcat02 bash
 # 进入容器挂载目录
 root@ebbfba2b098c:/usr/local/tomcat# cd webapps
 
-#创建 test.txt 文件
+# 创建 test.txt 文件
 root@ebbfba2b098c:/usr/local/tomcat# touch test.txt
 
 # 查看是否创建成功
@@ -201,9 +201,7 @@ docs  examples  host-manager  manager  ROOT
 
 ### 默认目录挂载
 
-自动数据卷目录路径。
-
-**启动容器进行挂载的时候，宿主机的路径必须是绝对路径**
+数据卷目录路径是固定的。
 
 格式：`docker run [options] -v <任意别名:容器内的路径[:ro | rw]> <镜像名>`
 
@@ -336,7 +334,7 @@ local     620fbea6f90b48fbead679838d70c44311f7e846bf08921a2d35c3d335ac4775
 local     kele
 ```
 
-**宿主机操作：** 找到 docker 的数据卷默认目录，进入 kele 目录下的 _data 目录，创建 test.txt 文件，测试读写权限
+**宿主机操作**：找到 docker 的数据卷默认目录，进入 kele 目录下的 _data 目录，创建 test.txt 文件，测试读写权限
 
 ```sh
 # 进入 kele 目录下的 _data 目录
@@ -439,7 +437,7 @@ local     kele
 
 ### 数据卷信息
 
-如果看过 [Docker - 常用命令](/docker/commands/)文章，那么查看数据卷的详细信息命令想必很快就想出来了。
+如果看过 [Docker - 常用命令](/docker/commands/) 文章，那么查看数据卷的详细信息命令想必很快就想出来了。
 
 格式：`docker volume inspect <数据卷名>`
 
@@ -502,6 +500,8 @@ local     bing
 local     kele
 ```
 
+创建的数据卷目录依然在 `/var/lib/docker/volumes` 下。
+
 ### 数据卷删除
 
 数据卷太多怎么办？可以删除指定名字的数据卷，也可以删除全部未被使用的数据卷。
@@ -556,7 +556,7 @@ Are you sure you want to continue? [y/N] y
 
 命名的容器挂载数据卷，其他容器通过挂载这个（父容器）实现数据共享，挂载数据卷的容器，称之为 **数据卷容器(Data Volume Container)**。
 
-通俗地来说，docker容 器数据卷可以看成使我们生活中常用的 U 盘，它存在于一个或多个的容器中，由 docker 挂载到容器，但不属于联合文件系统，Docker不会在容器删除时删除其挂载的数据卷。在创建一个容器时候，使用命令绑定一个父容器，这个父容器就是 **数据卷容器**。
+通俗地来说，docker 容器数据卷可以看成使我们生活中常用的 U 盘，它存在于一个或多个的容器中，由 docker 挂载到容器，但不属于联合文件系统，Docker 不会在容器删除时删除其挂载的数据卷。在创建一个容器时候，使用命令绑定一个父容器，这个父容器就是 **数据卷容器**。
 
 特点：
 
@@ -574,7 +574,7 @@ Are you sure you want to continue? [y/N] y
 docker run --volumes-from <数据卷容器名> <镜像名[:TAG | ID]>
 ```
 
-`--volumes-from` 可以多次使用来挂载多个容器里的多个数据卷。即该命令是**链式**的。
+`--volumes-from` 可以多次使用来挂载多个容器里的多个数据卷。即该命令是 **链式** 的。
 
 **使用 --volumes-from 参数所挂载数据卷的容器自己并不需要保持在运行状态。**
 
@@ -719,9 +719,9 @@ test2.txt  test.txt
 
 
 
-容器之间配置信息的传递，数据卷的生命周期一直持续到没有容器使用它为止。 存储在本机的文件则会一直保留！
+容器之间配置信息的传递，数据卷的生命周期一直持续到没有容器使用它为止。 存储在本机的文件则会一直保留。
 
-**如果删除了挂载的容器（包括 dbdata、db1 和 db2），数据卷并不会被自动删除。如果要删除一个数据卷，必须在删除最后一个还挂载着它的容器时使用 `docker rm -v` 命令来指定同时删除关联的容器。 这可以让用户在容器之间升级和移动数据卷。**
+**如果删除了挂载的容器（包括 dbdata、db1 和 db2），数据卷并不会被自动删除。如果要删除一个数据卷，必须在删除最后一个还挂载着它的容器时使用 `docker rm -v` 命令来指定同时删除关联的容器。这可以让用户在容器之间升级和移动数据卷。**
 
 ### 数据备份
 
@@ -741,7 +741,7 @@ docker run [options] --volumes-from <数据卷容器> [-v <宿主机绝对路径
 
 ```sh {8}
 # 备份
-docker run --name tomcat-backup --volumes-from tomcat10  tomcat:8.5.73 tar cvf /backup.tar /usr/local/tomcat/webapps
+docker run --name tomcat-backup --volumes-from tomcat10 tomcat:8.5.73 tar cvf /backup.tar /usr/local/tomcat/webapps
 
 # 查找备份的文件
 find / -name backup.tar
