--- a/docs/40.工具/40.容器部署 - Docker/17.Docker - 软件安装.md
+++ b/docs/40.工具/40.容器部署 - Docker/17.Docker - 软件安装.md
@@ -56,7 +56,7 @@ tomcat        8.5.73                      7ec084df520c   24 hours ago   249MB
 
 ### 启动使用
 
-Tomcat 的使用相比较其他还是非常简单的，Redis 启动后，进入容器的默认目录是 `/usr/local/tomcat`，这里提供几个启动命令：
+Tomcat 的使用相比较其他还是非常简单的，Tomcat 启动后，进入容器的默认目录是 `/usr/local/tomcat`，这里提供几个启动命令：
 
 - 命名后台启动
 
@@ -292,25 +292,25 @@ MySQL 版本网址：<https://registry.hub.docker.com/_/mysql>
 
 
     宿主机的挂载目录、conf.d 目录、data 数据目录、日志目录根据需求决定，包括密码。
-
+    
     这里说明一下：主配置文件名叫 my.cnf，位置在 `/etc/mysql`，但是不建议直接操作 my.cnf 主配置文件，官方也是如此，所以官方提供了 conf.d 目录，只要在 conf.d 目录下创建 xx.cnf 配置文件，那么该配置文件自动被引入 my.cnf 主配置文件，避免直接操作 my.cnf 引起安全问题。
-
+    
     my.cnf 文件里有这么一句代码：
-
+    
     ```sh
     includedir /etc/mysql/conf.d/
     ```
-
+    
     可以看出，my.cnf 会自动读取该目录下的所有 .cnf 配置文件。
-
+    
     ::: note
-
+    
     确保简单启动的密码和挂载启动的保持一致，因为启动后，密码保存在 `/var/lib/mysql` 目录下，而挂载的时候，宿主机的该目录会覆盖容器的目录，导致密码是简单启动的密码。所以确保两种启动方式密码保持一致。
-
+    
     ::: right
-
+    
     2021-12-11 @Young Kbt
-
+    
     :::
 
 - 配置 UTF-8 编码
