--- a/docs/40.工具/40.容器部署 - Docker/21.Docker - Compose.md
+++ b/docs/40.工具/40.容器部署 - Docker/21.Docker - Compose.md
@@ -26,7 +26,7 @@ tags:
 
 <span style="color:red">Compose</span> 定位是「定义和运行多个 Docker 容器的应用(Defining and running multi-container Docker applications)」，其前身是开源项目 Fig。
 
-过第一部分中的介绍，我们知道使用一个 `Dockerfile` 模板文件，可以让用户很方便的定义一个单独的应用容器。然而，在日常工作中，经常会碰到需要多个容器相互配合来完成某项任务的情况。例如要实现一个 Web 项目，除了 Web 服务容器本身，往往还需要再加上后端的数据库服务容器，甚至还包括负载均衡容
+在第一部分中的介绍，我们知道使用一个 `Dockerfile` 模板文件，可以让用户很方便的定义一个单独的应用容器。然而，在日常工作中，经常会碰到需要多个容器相互配合来完成某项任务的情况。例如要实现一个 Web 项目，除了 Web 服务容器本身，往往还需要再加上后端的数据库服务容器，甚至还包括负载均衡。
 
 <span style="color:red">Compose</span> 恰好满足了这样的需求。它允许用户通过一个单独的 `docker-compose.yml` 模板文件（HAML格式）来定义一组相关联的应用容器为一个项目（project）。
 
@@ -61,7 +61,7 @@ tags:
 
 使用 Compose 基本上是一个三步过程：
 
-1. 使用 定义您的应用程序的环境，`Dockerfile` 以便它可以在任何地方复制。
+1. 使用定义您的应用程序的环境，`Dockerfile` 以便它可以在任何地方复制。
 2. 定义组成您的应用程序的服务，`docker-compose.yml` 以便它们可以在隔离的环境中一起运行。
 3. 运行 `docker compose up` 和 [Docker compose command ](https://docs.docker.com/compose/cli-command/)启动并运行你的整个应用程序。您也可以 `docker-compose up` 使用 docker-compose 二进制文件运行。
 
@@ -91,7 +91,7 @@ volumes:
 
 - Linux
 
-    在 Linux 上的也安装十分简单，从官方 Gitub Release 处直接下载编译好的二进制文件即可。例如，在 Linux 64位系统上直接下载对应的二进制包,
+    在 Linux 上的也安装十分简单，从官方 Gitub Release 处直接下载编译好的二进制文件即可。例如，在 Linux 64 位系统上直接下载对应的二进制包,
 
     ```sh
     sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
@@ -198,11 +198,11 @@ networks:   # 声明服务用到的网桥
     external: true
 ```
 
-开头的 version 版本目前最高是3.9。
+开头的 version 版本目前最高是 3.9。
 
 注意每个服务都必须通过 image 指令指定镜像或 build 指令(需要 Dockerfile)等来自动构建生成镜像。
 
-如果使用 build 指令，在 Dockerfile 中设置的选项例如：CND ，EXPOSE，VOLUME ,ENV 等)将会自动被获取，无需在 docker-compose.yml 中重复设置。
+如果使用 build 指令，在 Dockerfile 中设置的选项例如：CND，EXPOSE，VOLUME，ENV 等)将会自动被获取，无需在 docker-compose.yml 中重复设置。
 
 下面分别介绍各个指令的用法和例子。
 
@@ -233,7 +233,7 @@ services:
     image: tomcat:8.5.73
 ```
 
-启动 yml 文件前，记得点击向上箭头在 Idea 同步文件内容到 Linux。
+启动 yml 文件前，记得点击向上箭头在 IDEA 同步文件内容到 Linux。
 
 启动 yml 文件的命令是 `docker-compose up`，如果后台启动，请加入 -d：`docker-compose up -d`：
 
@@ -539,7 +539,7 @@ bin  BUILDING.txt  conf  CONTRIBUTING.md  lib  LICENSE  logs  native-jni-lib  NO
 
 ### networks
 
-配置容器连接的网络，等价于 `docker run -network`。
+配置容器连接的网络，等价于 `docker run --network`。
 
 * 利用 `docker run` 启动的容器，默认网桥名为 `bridge`
 * 利用 yml 文件启动的容器，默认网桥名为 `docker-compose_default`
@@ -794,7 +794,7 @@ environment:
   - SESSION_SECRET=123456
 ```
 
-如果变量名称或者值中用到 true | false，yes | no 等表达 **布尔** 含义的词汇，**最好放到引号里** （如"true" | "false"），避免 YAML 自动解析某些内容为对应的布尔语义。这些特定词汇，包括：
+如果变量名称或者值中用到 true | false，yes | no 等表达 **布尔** 含义的词汇，**最好放到引号里** （如 "true" | "false"），避免 YAML 自动解析某些内容为对应的布尔语义。这些特定词汇，包括：
 
 ```md
 y|Y|yes|Yes|YES|n|N|no|No|NO|true|True|TRUE|false|False|FALSE|on|On|ON|off|Off|OFF
@@ -891,9 +891,9 @@ services:
     image: redis  
     container_name: redis
     ports:    # 映射端口
-    - "6379:6379"
+      - "6379:6379"
     volumes:     # 数据卷
-    - redisData:/data
+      - redisData:/data
     command: "redis-server --appendonly yes"    # 启动容器执行的命令
     
 volumes:   # 声明数据卷
@@ -1078,7 +1078,7 @@ networks:   # 声明服务用到的网桥
 
 ### 模板指令和常用指令的区别
 
-- 模板指令：用来书写在docker-compose.yml文件中指令称之为模板指令用来为服务进行服务的
+- 模板指令：用来书写在 docker-compose.yml 文件中指令称之为模板指令用来为服务进行服务的
 - 常用指令：用来对整个 docker-compose.yml 对应的这个项目操作
 
 ### 命令对象格式
@@ -1112,7 +1112,7 @@ docker-compose [-f=<arg> ......] [options] [COMMAND] [ARGS ......]
 docker-compose -f kele.yml up
 ```
 
-> **例子 2：虽然 docker-compose.yml 文件在 aa 目录下，但是我希望项目名不叫 aa名，而是叫 bb，启动它**
+> **例子 2：虽然 docker-compose.yml 文件在 aa 目录下，但是我希望项目名不叫 aa 名，而是叫 bb，启动它**
 
 ```sh
 docker-compose -P bb up
@@ -1148,7 +1148,7 @@ docker-compose -f <文件路径> up
 
 ### down
 
-此命令将会停止 `up` 命令启动的单个/所有服务，并移出自己创建的网络，但不会移出数据卷。
+此命令将会停止 `up` 命令启动的单个/所有服务，并移除自己创建的网络，但不会移除数据卷。
 
 格式：`docker-compose down [ service ...]`
 
