--- a/docs/80.关于/06.关于 - 本站/26.本站 - 首页大图模块.md
+++ b/docs/80.关于/06.关于 - 本站/26.本站 - 首页大图模块.md
@@ -965,13 +965,15 @@ desc 的字体大小，默认 1.4rem。提示：原主题是 1.1rem。
 
 上面的所有配置是属于 **静态大图效果**，如果你喜欢我的 **动态** 首页背景图：全背景、颜色随时间变化、日历显示当天、时间同步当前、播放音乐有音谱 ...（可能时间久远，我也许换背景图了🤣）
 
+![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/user/20211218235045.png)
+
 目前我仅使用在首页，如果进入文章页，则恢复原来的背景图。**为什么不全局使用呢？**
 
 我用过，下面也有注释说明如何全局配置，但是夜晚时候的右侧标题字体会被背景色同化（看不见），所以就当首页的背景图使用。文章页背景图利用官方给的属性来配置。
 
 ### 静态资源获取
 
-首先需要下载一些需要用到的图片，总共 1.47MB。[点击前往下载地址](https://www.youngkbt.cn/download/light/%E7%BD%91%E7%AB%99%E6%BA%90%E7%A0%81/)，找到 `fantasy.war` 压缩包并下载。
+首先需要下载一些需要用到的图片，总共 1.47MB。[点击前往下载地址](https://www.youngkbt.cn/download/light/%E7%BD%91%E7%AB%99%E6%BA%90%E7%A0%81/)，找到 `fantasy.rar` 压缩包并下载。
 
 下载后将其解压到 public 目录下，解压后的文件夹叫 `fantasy`，不是请改名。如图：
 
