--- a/docs/10.Java/05.Java集合 - Collection/02.ArrayList.md
+++ b/docs/10.Java/05.Java集合 - Collection/02.ArrayList.md
@@ -9,37 +9,35 @@ tags:
   - 
 ---
 
-# ArrayList
-
 ## ArrayList概述
 
-ArrayList是可以动态增长和缩减的索引序列，它是基于数组实现的List类。
+ArrayList 是可以动态增长和缩减的索引序列，它是基于数组实现的 List 类。
 
-该类封装了一个动态再分配的Object[]数组，每一个类对象都有一个capacity【容量】属性，表示它们所封装的Object[]数组的长度，当向ArrayList中添加元素时，该属性值会自动增加。如果想 ArrayList中添加大量元素，可使用ensureCapacity方法一次性增加capacity，可以减少增加重分配的次数提高性能。
+该类封装了一个动态可分配的 `Object[]` 数组，每一个类对象都有一个 capacity（容量）属性，表示它们所封装的 `Object[]` 数组的长度，当向 ArrayList 中添加元素时，该属性值会自动增加。如果想 ArrayList 中添加大量元素，可使用 ensureCapacity 方法一次性增加 capacity，可以减少增加重分配的次数提高性能。
 
-ArrayList的用法和Vector向类似，但是Vector是一个较老的集合，具有很多缺点，不建议使用。
+ArrayList 的用法和 Vector 向类似，但是 Vector 是一个较老的集合，具有很多缺点，不建议使用。
 
-另外，ArrayList和Vector的区别是：ArrayList是线程不安全的，当多条线程访问同一个ArrayList集合时，程序需要手动保证该集合的同步性，而Vector则是线程安全的。
+另外，ArrayList 和 Vector 的区别是：ArrayList 是线程不安全的，当多条线程访问同一个 ArrayList 集合时，程序需要手动保证该集合的同步性，而 Vector 则是线程安全的。
 
-ArrayList和Collection的关系：
+ArrayList 和 Collection 的关系：
 
 ![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Java集合/20211024144119.png)
 
 ## ArrayList的数据结构
 
-分析一个类的时候，数据结构往往是它的灵魂所在，理解底层的数据结构其实就理解了该类的实现思 路，具体的实现细节再具体分析。
+分析一个类的时候，数据结构往往是它的灵魂所在，理解底层的数据结构其实就理解了该类的实现思路，具体的实现细节再具体分析。
 
-ArrayList的数据结构是：
+ArrayList 的数据结构是：
 
 ![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Java集合/20211024144150.png)
 
-说明：底层的数据结构就是数组，数组元素类型为Object类型，即可以存放所有类型数据。我们对 ArrayList类的实例的所有的操作底层都是基于数组的。
+说明：底层的数据结构就是数组，数组元素类型为 Object 类型，即可以存放所有类型数据。我们对 ArrayList 类的实例的所有的操作底层都是基于数组的。
 
 ## ArrayList源码分析
 
-### 1、继承结构和层次关系
+### 继承结构和层次关系
 
-IDEA快捷键：Ctrl+H
+IDEA 快捷键：Ctrl+H
 
 ![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Java集合/20211024144209.png)
 
@@ -50,35 +48,36 @@ implements List<E>, RandomAccess, Cloneable, java.io.Serializable{
 }
 ```
 
-我们看一下ArrayList的继承结构：
+我们看一下 ArrayList 的继承结构：
 
-ArrayList extends AbstractList       AbstractList extends AbstractCollection
+```java
+ArrayList extends AbstractList, AbstractList extends AbstractCollection
+```
 
-所有类都继承Object 所以ArrayList的继承结构就是上图这样。
+所有类都继承 Object，所以 ArrayList 的继承结构就是上图这样。
 
-【分析】
+> 分析
+>
 
-**为什么要先继承AbstractList，而让AbstractList先实现List？而不是让ArrayList直接实现List？**
+**为什么要先继承 AbstractList，而让 AbstractList 先实现 List？而不是让 ArrayList 直接实现 List？**
 
-这里是有一个思想，接口中全都是抽象的方法，而抽象类中可以有抽象方法，还可以有具体的实现方法，正是利用了这一点，让AbstractList是实现接口中一些通用的方法，而具体的类，如ArrayList就继承这个AbstractList类，拿到一些通用的方法，然后自己在实现一些自己特有的方法，这样一来，让代码更简洁，就继承结构最底层的类中通用的方法都抽取出来，先一起实现了，减少重复代码。所以一般看到 一个类上面还有一个抽象类，应该就是这个作用。
+这里是有一个思想，接口中全都是抽象的方法，而抽象类中可以有抽象方法，还可以有具体的实现方法，正是利用了这一点，让 AbstractList 是实现接口中一些通用的方法，而具体的类，如 ArrayList 就继承这个 AbstractList 类，拿到一些通用的方法，然后自己在实现一些自己特有的方法，这样一来，让代码更简洁，就继承结构最底层的类中通用的方法都抽取出来，先一起实现了，减少重复代码。所以一般看到一个类上面还有一个抽象类，应该就是这个作用。
 
-**ArrayList实现了哪些接口？**
+**ArrayList 实现了哪些接口？**
 
-**List接口**：我们会出现这样一个疑问，在查看了ArrayList的父类 AbstractList也实现了List接口，那为什么子类ArrayList还是去实现一遍呢？
+**List 接口**：我们会出现这样一个疑问，在查看了 ArrayList 的父类 AbstractList 也实现了 List 接口，那为什么子类 ArrayList 还是去实现一遍 List 接口呢？
 
-这是想不通的地方，查资料显示，有的人说是为了查看代码方便，使观看者一目了然，说法不 一，但每一个让我感觉合理的，但是在stackOverFlow中找到了答案，这里其实很有趣。
+这是想不通的地方，查资料显示，有的人说是为了查看代码方便，使观看者一目了然，说法不一，但每一个让我感觉合理的，但是在 stackOverFlow 中找到了答案，这里其实很有趣。
 
-开发这个collection 的作者Josh说：
+开发这个 Collection 的作者 Josh 说：这其实是一个 mistake（失误），因为他写这代码的时候觉得这个会有用处，但是其实并没什么用，但因为没什么影响，就一直留到了现在。
 
-这其实是一个mistake[失误]，因为他写这代码的时候觉得这个会有用处，但是其实并没什么用，但因为没什么影响，就一直留到了现在。
+**RandomAccess 接口**：这个是一个标记性接口，通过查看 API 文档，它的作用就是用来快速随机存取，有关效率的问题，在实现了该接口的话，那么使用普通的 for 循环来遍历，性能更高，例如 ArrayList。而没有实现该接口的话，使用 Iterator 来迭代，这样性能更高，例如 LinkedList。所以这个标记性只是为了让我们知道我们用什么样的方式去获取数据性能更好。
 
-**RandomAccess接口**：这个是一个标记性接口，通过查看api文档，它的作用就是用来快速随机存取， 有关效率的问题，在实现了该接口的话，那么使用普通的for循环来遍历，性能更高，例如ArrayList。而没有实现该接口的话，使用Iterator来迭代，这样性能更高，例如linkedList。所以这个标记性只是为了 让我们知道我们用什么样的方式去获取数据性能更好。
+**Cloneable 接口**：实现了该接口，就可以使用 `Object.Clone()` 方法了。
 
-**Cloneable接口**：实现了该接口，就可以使用Object.Clone()方法了。
+**Serializable 接口**：实现该序列化接口，表明该类可以被序列化，什么是序列化？简单的说，就是能够从类变成字节流传输，然后还能从字节流变成原来的类。
 
-**Serializable接口**：实现该序列化接口，表明该类可以被序列化，什么是序列化？简单的说，就是能够 从类变成字节流传输，然后还能从字节流变成原来的类。
-
-### 2、类中的属性
+### 类中的属性
 
 ```java
 public class ArrayList<E> extends AbstractList<E>
@@ -101,7 +100,7 @@ implements List<E>, RandomAccess, Cloneable, java.io.Serializable
 }
 ```
 
-### 3、构造方法
+### 构造方法
 
 ![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Java集合/20211024144245.png)
 
@@ -112,15 +111,15 @@ implements List<E>, RandomAccess, Cloneable, java.io.Serializable
     Constructs an empty list with an initial capacity of ten.
     这里就说明了默认会给10的大小，所以说一开始arrayList的容量是10.
 */
-//ArrayList中储存数据的其实就是一个数组，这个数组就是elementData.
+// ArrayList 中储存数据的其实就是一个数组，这个数组就是 elementData.
 public ArrayList() {
-    super(); //调用父类中的无参构造方法，父类中的是个空的构造方法
+    super(); // 调用父类中的无参构造方法，父类中的是个空的构造方法
     this.elementData = EMPTY_ELEMENTDATA;
-    //EMPTY_ELEMENTDATA：是个空的Object[]， 将elementData初始化，elementData也是个Object[]类型。空的Object[]会给默认大小10，等会会解释什么时候赋值的。
+    // EMPTY_ELEMENTDATA：是个空的 Object[]， 将 elementData 初始化，elementData 也是个 Object[] 类型。空的 Object[] 会给默认大小 10，等会会解释什么时候赋值的。
 }
 ```
 
-有参构造方法1
+有参构造方法 1
 
 ```java
 /*
@@ -139,9 +138,9 @@ public ArrayList(int initialCapacity) {
         //将自定义的容量大小当成初始化 initialCapacity 的大小
         this.elementData = new Object[initialCapacity];
     } else if (initialCapacity == 0) {
-        this.elementData = EMPTY_ELEMENTDATA; //等同于无参构造方法
+        this.elementData = EMPTY_ELEMENTDATA; // 等同于无参构造方法
     } else {
-        //判断如果自定义大小的容量小于0，则报下面这个非法数据异常
+        // 判断如果自定义大小的容量小于 0，则报下面这个非法数据异常
         throw new IllegalArgumentException("Illegal Capacity: "+initialCapacity);
     }
 }
@@ -158,7 +157,7 @@ public ArrayList(int initialCapacity) {
 */
 public ArrayList(Collection<? extends E> c) {
     elementData = c.toArray(); //转换为数组
-    //每个集合的toarray()的实现方法不一样，所以需要判断一下，如果不是Object[].class类型，那么久需要使用ArrayList中的方法去改造一下。
+    // 每个集合的 toarray() 的实现方法不一样，所以需要判断一下，如果不是 Object[].class 类型，那么久需要使用 ArrayList 中的方法去改造一下。
     if ((size = elementData.length) != 0) {
    		 // c.toArray might (incorrectly) not return Object[] (see 6260652)
    		 if (elementData.getClass() != Object[].class)
@@ -170,15 +169,17 @@ public ArrayList(Collection<? extends E> c) {
 }
 ```
 
-这个构造方法不常用，举个例子就能明白什么意思
+这个构造方法不常用，举个例子就能明白什么意思。
 
-举个例子： Strudent exends Person ， ArrayList、 Person这里就是泛型 ， 我还有一个Collection、 由于这个Student继承了Person，那么根据这个构造方法，我就可以把这个Collection转换为ArrayList ， 这就是这个构造方法的作用 。
+举个例子： Strudent exends Person，ArrayList、Person 这里就是泛型，我还有一个 Collection、由于这个 Student 继承了 Person，那么根据这个构造方法，我就可以把这个 Collection 转换为 ArrayList，这就是这个构造方法的作用。
 
-【总结】ArrayList的构造方法就做一件事情，就是初始化一下储存数据的容器，其实本质上就是一个数 组，在其中就叫elementData。
+> 总结
 
-### 4、核心方法-add
+ArrayList 的构造方法就做一件事情，就是初始化一下储存数据的容器，其实本质上就是一个数组，在其中就叫 elementData。
 
-**alt+7 查看方法列表，ctrl+左键 选中add进去后查看**
+### 核心方法add
+
+ALT + 7 查看方法列表，CTRL + 左键选中 add 进去后查看。
 
 **boolean add(E)**
 
@@ -190,14 +191,14 @@ public ArrayList(Collection<? extends E> c) {
 * @return <tt>true</tt> (as specified by {@link Collection#add})
 */
 public boolean add(E e) {
-    //确定内部容量是否够了，size是数组中数据的个数，因为要添加一个元素，所以size+1，先判断size+1的这个数数组能否放得下，就在这个方法中去判断是否数组.length是否够用了。
+    // 确定内部容量是否够了，size 是数组中数据的个数，因为要添加一个元素，所以 size+1，先判断 size+1 的这个数数组能否放得下，就在这个方法中去判断是否数组.length 是否够用了。
     ensureCapacityInternal(size + 1); // Increments modCount!!
-    elementData[size++] = e; //在数据中正确的位置上放上元素e，并且size++
+    elementData[size++] = e; // 在数据中正确的位置上放上元素 e，并且 size++
     return true;
 }
 ```
 
-【分析：ensureCapacityInternal(xxx); 确定内部容量的方法】
+分析：ensureCapacityInternal(xxx)：确定内部容量的方法
 
 ```java
 private void ensureCapacityInternal(int minCapacity) {
@@ -205,64 +206,62 @@ private void ensureCapacityInternal(int minCapacity) {
 }
 
 private static int calculateCapacity(Object[] elementData, int minCapacity){
-    //看，判断初始化的elementData是不是空的数组，也就是没有长度
+    // 看，判断初始化的 elementData 是不是空的数组，也就是没有长度
     if (elementData == DEFAULTCAPACITY_EMPTY_ELEMENTDATA) {
-        //因为如果是空的话，minCapacity=size+1；其实就是等于1，空的数组没有长度就存放不了，所以就将minCapacity变成10，也就是默认大小，但是在这里，还没有真正的初始化这个elementData的大小。
+        // 因为如果是空的话，minCapacity=size+1；其实就是等于 1，空的数组没有长度就存放不了，所以就将 minCapacity 变成 10，也就是默认大小，但是在这里，还没有真正的初始化这个 elementData 的大小。
         return Math.max(DEFAULT_CAPACITY, minCapacity);
     }
-    //确认实际的容量，上面只是将minCapacity=10，这个方法就是真正的判断elementData是否够用
+    // 确认实际的容量，上面只是将 minCapacity=10，这个方法就是真正的判断 elementData 是否够用
     return minCapacity;
 }
 
 private void ensureExplicitCapacity(int minCapacity) {
     modCount++;
     //  overflow-conscious code
-    //minCapacity如果大于了实际elementData的长度，那么就说明elementData数组的长度不够用，不够用那么就要增加elementData的length。这里有的同学就会模糊minCapacity到底是什么呢，这里给你们分析一下
+    // minCapacity 如果大于了实际 elementData 的长度，那么就说明 elementData 数组的长度不够用，不够用那么就要增加 elementData 的length。这里有的同学就会模糊 minCapacity 到底是什么呢，这里给你们分析一下
     /*
-    第一种情况：由于elementData初始化时是空的数组，那么第一次add的时候，minCapacity=size+1；也就minCapacity=1，在上一个方法(确定内部容量ensureCapacityInternal)就会判断出是空的数组，就会给将minCapacity=10，到这一步为止，还没有改变elementData的大小。
+    第一种情况：由于 elementData 初始化时是空的数组，那么第一次 add 的时候，minCapacity = size+1；也就 minCapacity=1，在上一个方法(确定内部容量 ensureCapacityInternal)就会判断出是空的数组，就会给将 minCapacity=10，到这一步为止，还没有改变 elementData 的大小。
     
-	第二种情况：elementData不是空的数组了，那么在add的时候，minCapacity=size+1；也就是minCapacity代表着elementData中增加之后的实际数据个数，拿着它判断elementData的length是否够用，如果length不够用，那么肯定要扩大容量，不然增加的这个元素就会溢出。
+	第二种情况：elementData 不是空的数组了，那么在 add 的时候，minCapacity=size+1；也就是 minCapacity 代表着 elementData 中增加之后的实际数据个数，拿着它判断 elementData 的 length 是否够用，如果 length 不够用，那么肯定要扩大容量，不然增加的这个元素就会溢出。
 */
     if (minCapacity - elementData.length > 0)
 		grow(minCapacity);
 }
-//arrayList核心的方法，能扩展数组大小的真正秘密。
+// ArrayList 核心的方法，能扩展数组大小的真正秘密。
 private void grow(int minCapacity) {
     // overflow-conscious code
     
-    //将扩充前的elementData大小给oldCapacity
+    // 将扩充前的 elementData 大小给 oldCapacity
     int oldCapacity = elementData.length;
     
-    //newCapacity就是1.5倍的oldCapacity
+    // newCapacity 就是 1.5 倍的 oldCapacity
     int newCapacity = oldCapacity + (oldCapacity >> 1);
     
-    //这句话就是适应于elementData就空数组的时候，length=0，那么oldCapacity=0，newCapacity=0，所以这个判断成立，在这里就是真正的初始化elementData的大小了，就是为10.前面的工作都是准备工作。
+    // 这句话就是适应于 elementData 就空数组的时候，length=0，那么 oldCapacity=0，newCapacity=0，所以这个判断成立，在这里就是真正的初始化 elementData 的大小了，就是为 10，前面的工作都是准备工作。
     if (newCapacity - minCapacity < 0)
 		newCapacity = minCapacity;
     
-    //如果newCapacity超过了最大的容量限制，就调用hugeCapacity，也就是将能给的最大值给newCapacity
+    // 如果 newCapacity 超过了最大的容量限制，就调用 hugeCapacity，也就是将能给的最大值给 newCapacity
     if (newCapacity - MAX_ARRAY_SIZE > 0)
         newCapacity = hugeCapacity(minCapacity);
     // minCapacity is usually close to size, so this is a win:
-    //新的容量大小已经确定好了，就copy数组，改变容量大小咯。
+    // 新的容量大小已经确定好了，就 copy 数组，改变容量大小咯。
     elementData = Arrays.copyOf(elementData, newCapacity);
 }
     
 
-//这个就是上面用到的方法，很简单，就是用来赋最大值
+// 这个就是上面用到的方法，很简单，就是用来赋最大值
 private static int hugeCapacity(int minCapacity) {
     if (minCapacity < 0) // overflow
         throw new OutOfMemoryError();
     
-//如果minCapacity都大于MAX_ARRAY_SIZE，那么就Integer.MAX_VALUE返回，反之将MAX_ARRAY_SIZE返回。因为maxCapacity是三倍的minCapacity，可能扩充的太大了，就用minCapacity来判断了。
+// 如果 minCapacity 都大于 MAX_ARRAY_SIZE，那么就 Integer.MAX_VALUE 返回，反之将 MAX_ARRAY_SIZE 返回。因为 maxCapacity 是三倍的 minCapacity，可能扩充的太大了，就用 minCapacity 来判断了。
 
-//Integer.MAX_VALUE:2147483647 MAX_ARRAY_SIZE：2147483639 也就是说最大也就能给到第一个数值。还是超过了这个限制，就要溢出了。相当于arraylist给了两层防护。    
+// Integer.MAX_VALUE:2147483647 MAX_ARRAY_SIZE：2147483639 也就是说最大也就能给到第一个数值。还是超过了这个限制，就要溢出了。相当于 Arraylist 给了两层防护。    
     return (minCapacity > MAX_ARRAY_SIZE) ?
         Integer.MAX_VALUE :
     MAX_ARRAY_SIZE;
 }
-
-    
 ```
 
 
@@ -271,33 +270,33 @@ private static int hugeCapacity(int minCapacity) {
 
 ```java
 public void add(int index, E element) {
-    //检查index也就是插入的位置是否合理。
+    // 检查 index 也就是插入的位置是否合理。
     rangeCheckForAdd(index);
     
     ensureCapacityInternal(size + 1); // Increments modCount!!
     
-    //这个方法就是用来在插入元素之后，要将index之后的元素都往后移一位，
+    // 这个方法就是用来在插入元素之后，要将 index 之后的元素都往后移一位，
     System.arraycopy(elementData, index, elementData, index + 1,
     					size - index);
     
-    //在目标位置上存放元素
+    // 在目标位置上存放元素
     elementData[index] = element;
     size++;
 }
 ```
 
-【分析：rangeCheckForAdd(index)】
+分析：rangeCheckForAdd(index)
 
 ```java
 private void rangeCheckForAdd(int index) {
-    //插入的位置肯定不能大于size 和小于0
+    // 插入的位置肯定不能大于 size 和小于 0
     if (index > size || index < 0)
-        //如果是，就报这个越界异常
+        // 如果是，就报这个越界异常
         throw new IndexOutOfBoundsException(outOfBoundsMsg(index));
 }
 ```
 
-【System.arraycopy(...)：就是将elementData在插入位置后的所有元素，往后面移一位】
+System.arraycopy(src, srcPos, dest, destPos, length)：就是将 elementData 在插入位置后的所有元素，往后面移一位           
 
 ```java
 public static void arraycopy(Object src,
@@ -306,105 +305,106 @@ public static void arraycopy(Object src,
             int destPos,
             int length)
 
-    //src：源对象
-    //srcPos：源对象对象的起始位置
-    //dest：目标对象
-    //destPost：目标对象的起始位置
-    //length：从起始位置往后复制的长度。
+    // src：源对象
+    // srcPos：源对象对象的起始位置
+    // dest：目标对象
+    // destPost：目标对象的起始位置
+    // length：从起始位置往后复制的长度。
   
 ```
 
 **注释解读：**
 
-这段的大概意思就是解释这个方法的用法，复制src到dest，复制的位置是从src的srcPost开始，到srcPost+length-1的位置结束，复制到destPost上，从destPost开始到destPost+length-1的位置上
+这段的大概意思就是解释这个方法的用法，复制 src 到 dest，复制的位置是从 src 的 srcPost 开始，到 srcPost+length - 1 的位置结束，复制到 destPost 上，从 destPost 开始到 destPost+length - 1 的位置上
 
-![image-20210330155111328](https://fastly.jsdelivr.net/gh/oddfar/static/img/JavaSE-集合.assets/image-20210330155111328.png)
+![image-20210330155111328](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Java%E9%9B%86%E5%90%88/20220618214404.png)
 
-告诉你复制的一种情况，如果A和B是一样的，那么先将A复制到临时数组C，然后通过C复制到B，用了一个第三方参数
+告诉你复制的一种情况，如果 A 和 B 是一样的，那么先将 A 复制到临时数组 C，然后通过 C 复制到 B，用了一个第三方参数
 
-![image-20210330155151694](https://fastly.jsdelivr.net/gh/oddfar/static/img/JavaSE-集合.assets/image-20210330155151694.png)
+![image-20210330155151694](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Java%E9%9B%86%E5%90%88/20220618214435.png)
 
-这一大段，就是来说明会出现的一些问题，NullPointerException和IndexOutOfBoundsException 还有ArrayStoreException 这三个异常出现的原因。
+这一大段，就是来说明会出现的一些问题，NullPointerException 和 IndexOutOfBoundsException 还有 ArrayStoreException 这三个异常出现的原因。
 
-![image-20210330155313786](https://fastly.jsdelivr.net/gh/oddfar/static/img/JavaSE-集合.assets/image-20210330155313786.png)
+![image-20210330155313786](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Java%E9%9B%86%E5%90%88/20220618214439.png)
 
-这里描述了一种特殊的情况，就是当A的长度大于B的长度的时候，会复制一部分，而不是完全失败。
+这里描述了一种特殊的情况，就是当 A 的长度大于 B 的长度的时候，会复制一部分，而不是完全失败。
 
-![image-20210330155350320](https://fastly.jsdelivr.net/gh/oddfar/static/img/JavaSE-集合.assets/image-20210330155350320.png)
+![image-20210330155350320](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Java%E9%9B%86%E5%90%88/20220618214425.png)
 
 这些是参数列表的解释和异常
 
-![image-20210330155421252](https://fastly.jsdelivr.net/gh/oddfar/static/img/JavaSE-集合.assets/image-20210330155421252.png)
+![image-20210330155421252](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Java%E9%9B%86%E5%90%88/20220618214519.png)
 
 :scream:读别人源码是件很头疼的事，新手会用就行，原理等以后回来复习的时候再看~
 
-【总结】
+> 总结
+>
 
-正常情况下会扩容1.5倍，特殊情况下（新扩展数组大小已经达到了最大值）则只取最大值。
+正常情况下会扩容 1.5 倍，特殊情况下（新扩展数组大小已经达到了最大值）则只取最大值。
 
-当我们调用add方法时，实际上的函数调用如下：
+当我们调用 add 方法时，实际上的函数调用如下：
 
-![image-20210330161507771](https://fastly.jsdelivr.net/gh/oddfar/static/img/JavaSE-集合.assets/image-20210330161507771.png)
+![image-20210330161507771](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Java%E9%9B%86%E5%90%88/20220618214455.png)
 
-说明：程序调用add，实际上还会进行一系列调用，可能会调用到grow，grow可能会调用hugeCapacity。
+说明：程序调用 add，实际上还会进行一系列调用，可能会调用到 grow，grow 可能会调用 hugeCapacity。
 
-【举例】
+举例
 
 ```java
 List<Integer> lists = new ArrayList<Integer>;
 lists.add(8);
 ```
 
-说明：初始化lists大小为0，调用的ArrayList()型构造函数，那么在调用lists.add(8)方法时，会经过怎样 的步骤呢？下图给出了该程序执行过程和最初与最后的elementData的大小。
+说明：初始化 lists 大小为 0，调用的 `ArrayList()` 型构造函数，那么在调用 `lists.add(8)` 方法时，会经过怎样的步骤呢？下图给出了该程序执行过程和最初与最后的 elementData 的大小。
 
-![image-20210330161955630](https://fastly.jsdelivr.net/gh/oddfar/static/img/JavaSE-集合.assets/image-20210330161955630.png)
+![image-20210330161955630](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Java%E9%9B%86%E5%90%88/20220618214511.png)
 
-说明：我们可以看到，在add方法之前开始elementData = {}；调用add方法时会继续调用，直至 grow，最后elementData的大小变为10，之后再返回到add函数，把8放在elementData[0]中。
+说明：我们可以看到，在 add 方法之前开始 `elementData = {}`；调用 add 方法时会继续调用，直至 grow，最后 elementData 的大小变为 10，之后再返回到 add 函数，把 8 放在 elementData[0] 中。
 
-【举例说明二】
+举例说明二
 
 ```java
 List<Integer> lists = new ArrayList<Integer>(6);
 lists.add(8);
 ```
 
-说明：调用的ArrayList(int)型构造函数，那么elementData被初始化为大小为6的Object数组，在调用add(8)方法时，具体的步骤如下：
+说明：调用的 ArrayList(int) 型构造函数，那么 elementData 被初始化为大小为 6 的 Object 数组，在调用 `add(8)` 方法时，具体的步骤如下：
 
-![image-20210330162415006](https://fastly.jsdelivr.net/gh/oddfar/static/img/JavaSE-集合.assets/image-20210330162415006.png)
+![image-20210330162415006](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Java%E9%9B%86%E5%90%88/20220618214545.png)
 
-说明：我们可以知道，在调用add方法之前，elementData的大小已经为6，之后再进行传递，不会进行 扩容处理。
+说明：我们可以知道，在调用 add 方法之前，elementData 的大小已经为 6，之后再进行传递，不会进行扩容处理。
 
 推荐文章系列： [【集合框架】JDK1.8源码分析之HashMap（一）](https://www.cnblogs.com/leesf456/p/5242233.html)
 
-### 5、核心方法-remove
+### 核心方法remove
 
-其实这几个删除方法都是类似的。我们选择几个讲，其中fastRemove(int)方法是private的，是提供给 remove(Object)这个方法用的。
+其实这几个删除方法都是类似的。我们选择几个讲，其中 fastRemove(int) 方法是 private 的，是提供给 remove(Object) 这个方法用的。
 
 remove(int)：通过删除指定位置上的元素
 
 ```java
 public E remove(int index) {
-    rangeCheck(index);//检查index的合理性
+    rangeCheck(index);// 检查 index 的合理性
     
-    modCount++;//这个作用很多，比如用来检测快速失败的一种标志。
-    E oldValue = elementData(index);//通过索引直接找到该元素
+    modCount++; // 这个作用很多，比如用来检测快速失败的一种标志。
+    E oldValue = elementData(index); // 通过索引直接找到该元素
     
-    int numMoved = size - index - 1;//计算要移动的位数。
+    int numMoved = size - index - 1; // 计算要移动的位数
     if (numMoved > 0)
-    	//这个方法也已经解释过了，就是用来移动元素的。
-    	System.arraycopy(elementData, index+1, elementData, index,numMoved);
-    //将--size上的位置赋值为null，让gc(垃圾回收机制)更快的回收它。
+    	// 这个方法也已经解释过了，就是用来移动元素的。
+    	System.arraycopy(elementData, index+1, elementData, index, numMoved);
+    // 将 --size 上的位置赋值为 null，让 gc (垃圾回收机制)更快的回收它
     elementData[--size] = null; // clear to let GC do its work
-    //返回删除的元素。
+    // 返回删除的元素
     return oldValue;
 }
 ```
 
-remove(Object)：这个方法可以看出来，arrayList是可以存放null值
+remove(Object)：这个方法可以看出来，arrayList 是可以存放 null 值
 
 ```java
-//通过元素来删除该元素，就依次遍历，如果有这个元素，就将该元素的索引传给fastRemobe(index)，使用这个方法来删除该元素，
-//fastRemove(index)方法的内部跟remove(index)的实现几乎一样，这里最主要是知道arrayList可以存储null值
+// 通过元素来删除该元素，就依次遍历，如果有这个元素，就将该元素的索引传给 fastRemobe(index)，使用这个方法来删除该元素，
+// fastRemove(index) 方法的内部跟 remove(index) 的实现几乎一样，这里最主要是知道 arrayList 可以存储 null 值
 public boolean remove(Object o) {
     if (o == null) {
     	for (int index = 0; index < size; index++)
@@ -423,7 +423,7 @@ public boolean remove(Object o) {
 }
 ```
 
-clear()：将elementData中每个元素都赋值为null，等待垃圾回收将这个给回收掉，所以叫clear
+clear()：将 elementData 中每个元素都赋值为 null，等待垃圾回收将这个给回收掉，所以叫 clear
 
 ```java
 public void clear() {
@@ -440,11 +440,11 @@ removeAll(collection c)
 
 ```java
 public boolean removeAll(Collection<?> c) {
-	return batchRemove(c, false);//批量删除
+	return batchRemove(c, false); // 批量删除
 }
 ```
 
-batchRemove(xx,xx)：用于两个方法，一个removeAll()：它只清楚指定集合中的元素，retainAll() 用来测试两个集合是否有交集。
+batchRemove(xx,xx)：用于两个方法，一个 removeAll()：它只清楚指定集合中的元素，retainAll() 用来测试两个集合是否有交集。
 
 ```java
 //这个方法，用于两处地方，如果complement为false，则用于removeAll如果为true，则给retainAll()用，retainAll（）是用来检测两个集合是否有交集的。
@@ -486,11 +486,11 @@ private boolean batchRemove(Collection<?> c, boolean complement) {
     }
 ```
 
-总结：remove函数，用户移除指定下标的元素，此时会把指定下标到数组末尾的元素向前移动一个单 位，并且会把数组最后一个元素设置为null，这样是为了方便之后将整个数组不被使用时，会被GC，可 以作为小的技巧使用。
+总结：remove 函数，用户移除指定下标的元素，此时会把指定下标到数组末尾的元素向前移动一个单位，并且会把数组最后一个元素设置为 null，这样是为了方便之后将整个数组不被使用时，会被 GC，可以作为小的技巧使用。
 
-### 6、其他方法
+### 其他方法
 
-**set()方法**
+**set() 方法**
 
 说明：设定指定下标索引的元素值
 
@@ -507,9 +507,9 @@ public E set(int index, E element) {
 }
 ```
 
-**indexOf()方法**
+**indexOf() 方法**
 
-说明：从头开始查找与指定元素相等的元素，注意，是可以查找null元素的，意味着ArrayList中可以存放null元素的。与此函数对应的lastIndexOf，表示从尾部开始查找。
+说明：从头开始查找与指定元素相等的元素，注意，是可以查找 null 元素的，意味着 ArrayList 中可以存放 null 元素的。与此函数对应的 lastIndexOf，表示从尾部开始查找。
 
 ```java
 // 从首开始查找数组里面是否存在指定元素
@@ -528,7 +528,7 @@ public int indexOf(Object o) {
 }
 ```
 
-**get()方法**
+**get() 方法**
 
 ```java
 public E get(int index) {
@@ -538,7 +538,7 @@ public E get(int index) {
 }
 ```
 
-说明：get函数会检查索引值是否合法（只检查是否大于size，而没有检查是否小于0），值得注意的 是，在get函数中存在element函数，element函数用于返回具体的元素，具体函数如下：
+说明：get 函数会检查索引值是否合法（只检查是否大于 size，而没有检查是否小于 0），值得注意的是，在 get 函数中存在 element 函数，element 函数用于返回具体的元素，具体函数如下：
 
 ```java
 E elementData(int index) {
@@ -550,9 +550,9 @@ E elementData(int index) {
 
 ## ArrayList实践
 
-问题：我们现在有4只小狗，我们如何存储它的信息，获取总数，并能够逐条打印狗狗信息！
+问题：我们现在有 4 只小狗，我们如何存储它的信息，获取总数，并能够逐条打印狗狗信息。
 
-分析：通过List 接口的实现类ArrayList 实现该需求。
+分析：通过 List 接口的实现类 ArrayList 实现该需求。
 
 - 元素个数不确定
 - 要求获得元素的实际个数
@@ -591,24 +591,30 @@ public class TestArrayList {
 
 问题联想：
 
-- 删除第一个狗狗 ：remove（index）
-- 删除指定位置的狗狗 ：remove（object）
-- 判断集合中是否包含指定狗狗 ： contains（object）
+- 删除第一个狗狗：remove（index）
+- 删除指定位置的狗狗：remove（object）
+- 判断集合中是否包含指定狗狗：contains（object）
 
-分析：使用List接口提供的remove()、contains()方法
+分析：使用 List 接口提供的 remove()、contains()方法
 
-【常用方法】
+常用方法
 
-![image-20210330141203456](https://fastly.jsdelivr.net/gh/oddfar/static/img/JavaSE-集合.assets/image-20210330141203456.png)
+![image-20210330141203456](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Java%E9%9B%86%E5%90%88/20220618214557.png)
 
 
 
-# 总结
+## 总结
 
-1）arrayList可以存放null。
-2）arrayList本质上就是一个elementData数组。
-3）arrayList区别于数组的地方在于能够自动扩展大小，其中关键的方法就是gorw()方法。
-4）arrayList中removeAll(collection c)和clear()的区别就是removeAll可以删除批量指定的元素，而clear是全是删除集合中的元素。
-5）arrayList由于本质是数组，所以它在数据的查询方面会很快，而在插入删除这些方面，性能下降很
-多，有移动很多数据才能达到应有的效果
-6）arrayList实现了RandomAccess，所以在遍历它的时候推荐使用for循环。
+- arrayList 可以存放 null
+- 2）arrayList 本质上就是一个 elementData 数组
+- 3）arrayList 区别于数组的地方在于能够自动扩展大小，其中关键的方法就是 `gorw()` 方法
+- 4）arrayList 中 `removeAll(collection c)` 和 `clear()` 的区别就是 removeAll 可以删除批量指定的元素，而 clear 是全是删除集合中的元素
+- 5）arrayList 由于本质是数组，所以它在数据的查询方面会很快，而在插入删除这些方面，性能下降很多，有移动很多数据才能达到应有的效果
+- 6）arrayList 实现了 RandomAccess，所以在遍历它的时候推荐使用 for 循环
+
+版本区别：
+
+- JDK 1.7，在 new ArrayList() 的时候，初始化 elementData 数组长度为 10，此后每次扩容都为原来的 1.5 倍
+- JDK1.8，在  new ArrayList() 的时候，不会进行初始化，而是在第一次 add 后才创建长度为 10 的数组，此后每次扩容都为原来的 1.5 倍
+
+所以 JDK1.8 使用了懒加载模式，包括 HashMap 等集合，都是在添加元素的才初始化长度。
