--- a/docs/10.Java/05.Java集合 - Collection/04.Vevtor和Stack.md
+++ b/docs/10.Java/05.Java集合 - Collection/04.Vevtor和Stack.md
@@ -9,39 +9,37 @@ tags:
   - 
 ---
 
-# Vevtor和Stack
-
-前面写了一篇关于的是LinkedList的除了它的数据结构稍微有一点复杂之外，其他的都很好理解的。这一篇说的大家在开发中很少去用到，有的时候也可能是会用到的，了解就行。
+前面写了一篇关于的是 LinkedList 的除了它的数据结构稍微有一点复杂之外，其他的都很好理解的。这一篇说的大家在开发中很少去用到，有的时候也可能是会用到的，了解就行。
 
 注意在学习这一篇之前，需要有多线程的知识：
 
-**1）锁机制：对象锁、方法锁、类锁**
+**锁机制：对象锁、方法锁、类锁**
 
-对象锁就是方法锁：就是在一个类中的方法上加上synchronized关键字，这就是给这个方法加锁了。
+对象锁就是方法锁：就是在一个类中的方法上加上 Synchronized 关键字，这就是给这个方法加锁了。
 
-类锁：锁的是整个类，当有多个线程来声明这个类的对象的时候将会被阻塞，直到拥有这个类锁的对象被销毁或者主动释放了类锁。这个时候在被阻塞住的线程被挑选出一个占有该类锁，声明该类的对象。 其他线程继续被阻塞住。例如：在类A上有关键字synchronized，那么就是给类A加了类锁，线程1第一 个声明此类的实例，则线程1拿到了该类锁，线程2在想声明类A的对象，就会被阻塞。
+类锁：锁的是整个类，当有多个线程来声明这个类的对象的时候将会被阻塞，直到拥有这个类锁的对象被销毁或者主动释放了类锁。这个时候在被阻塞住的线程被挑选出一个占有该类锁，声明该类的对象。 其他线程继续被阻塞住。例如：在类 A 上有关键字 Synchronized，那么就是给类 A 加了类锁，线程 1 第一个声明此类的实例，则线程 1 拿到了该类锁，线程 2 在想声明类A的对象，就会被阻塞。
 
-2）在本文中，使用的是方法锁。
+在本文中，使用的是方法锁。
 
-3）每个对象只有一把锁，有线程A，线程B，还有一个集合C类，线程A操作C拿到了集合中的锁（在集合C中有用synchronized关键字修饰的），并且还没有执行完，那么线程A就不会释放锁，当轮到线程B去操作集合C中的方法时 ，发现锁被人拿走了，所以线程B只能等待那个拿到锁的线程使用完，然后才能拿到锁进行相应的操作。
+每个对象只有一把锁，有线程 A，线程 B，还有一个集合 C 类，线程 A 操作 C 拿到了集合中的锁（在集合 C 中有用 Synchronized 关键字修饰的），并且还没有执行完，那么线程 A 就不会释放锁，当轮到线程 B 去操作集合 C 中的方法时，发现锁被人拿走了，所以线程 B 只能等待那个拿到锁的线程使用完，然后才能拿到锁进行相应的操作。
 
-### 1、Vector概述
+## Vector概述
 
-![image-20210331092950219](https://fastly.jsdelivr.net/gh/oddfar/static/img/JavaSE-集合.assets/image-20210331092950219.png)
+![image-20220618214935830](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Java%E9%9B%86%E5%90%88/20220618214937.png)
 
 
 
-通过API中可以知道：
+通过 API 中可以知道：
 
-1. Vector是一个可变化长度的数组
-2. Vector增加长度通过的是capacity和capacityIncrement这两个变量，目前还不知道如何实现自动 扩增的，等会源码分析
-3.  Vector也可以获得iterator和listIterator这两个迭代器，并且他们发生的是fail-fast，而不是failsafe，注意这里，不要觉得这个vector是线程安全就搞错了，具体分析在下面会说
-4.  Vector是一个线程安全的类，如果使用需要线程安全就使用Vector，如果不需要，就使用arrayList
-5. Vector和ArrayList很类似，就少许的不一样，从它继承的类和实现的接口来看，跟arrayList一模一 样。
+1. Vector 是一个可变化长度的数组
+2. Vector 增加长度通过的是 capacity 和 capacityIncrement 这两个变量，目前还不知道如何实现自动扩增的，等会源码分析
+3.  Vector 也可以获得 iterator 和 listIterator 这两个迭代器，并且他们发生的是 fail-fast，而不是 failsafe，注意这里，不要觉得这个 Vector 是线程安全就搞错了，具体分析在下面会说
+4.  Vector 是一个线程安全的类，如果使用需要线程安全就使用 Vector，如果不需要，就使用 ArrayList
+5. Vector 和 ArrayList 很类似，就少许的不一样，从它继承的类和实现的接口来看，跟 ArrayList 一模一样
 
-注意：java1.5推出的java.uitl.concurrent包，为了解决复杂的并发问题的。所以开发中，不建议用vector，原因在文章的结束会有解释，需要线程安全的集合类直接用java.util.concurrent包下的类。
+注意：Java1.5 推出的 `java.uitl.concurrent` 包，为了解决复杂的并发问题的。所以开发中，不建议用 Vector，原因在 [List 总结](/java/se/collection/List-summary/) 会有解释，需要线程安全的集合类直接用 `java.util.concurrent` 包下的类。
 
-### 2、Vector源码分析
+## Vector源码分析
 
 ```java
 public class Vector<E>
@@ -52,16 +50,16 @@ public class Vector<E>
 	}
 ```
 
-我们发现Vector的继承关系和层次结构和ArrayList中的一模一样，忘记的可以去ArrayList标题查看！
+我们发现 Vector 的继承关系和层次结构和 ArrayList 中的一模一样，忘记的可以去 ArrayList 文章查看。
 
-#### 构造方法
+### 构造方法
 
 一共有四个构造方法。
 
 构造方法作用：
 
 - 初始化存储元素的容器，也就是数组，elementData，
-- 初始化capacityIncrement的大小，默认是0，这个的作用就是扩展数组的时候，增长的大小，为0 则每次扩展2倍
+- 初始化 capacityIncrement 的大小，默认是 0，这个的作用就是扩展数组的时候，增长的大小，为 0 则每次扩展 2 倍
 
 Vector()：空构造
 
@@ -142,9 +140,9 @@ public Vector(Collection<? extends E> c) {
 }
 ```
 
-#### 核心方法
+### 核心方法
 
-add()方法
+add() 方法
 
 ```java
 /**
@@ -203,7 +201,7 @@ private void grow(int minCapacity) {
 }
 ```
 
-只要能看的懂ArrayList，这个就是在每个方法上比arrayList多了一个synchronized，其他都一 样。这里就不再分析了！
+只要能看的懂 ArrayList，这个就是在每个方法上比 ArrayList 多了一个 Synchronized，其他都一 样。这里就不再分析了。
 
 ```java
 public synchronized E get(int index) {
@@ -214,28 +212,28 @@ public synchronized E get(int index) {
 }
 ```
 
-### 3、Stack
+## Stack
 
-现在来看看Vector的子类Stack，学过数据结构都知道，这个就是栈的意思。那么该类就是跟栈的用法一 样了
+现在来看看 Vector 的子类 Stack，学过数据结构都知道，这个就是栈的意思。那么该类就是跟栈的用法一样了
 
 ```java
 class Stack<E> extends Vector<E> {}
 ```
 
-通过查看他的方法，和查看api文档，很容易就能知道他的特性。就几个操作，出栈，入栈等，构造方法也是空的，用的还是数组，父类中的构造，跟父类一样的扩增方式，并且它的方法也是同步的，所以也是线程安全。
+通过查看他的方法，和查看 API 文档，很容易就能知道他的特性。就几个操作，出栈，入栈等，构造方法也是空的，用的还是数组，父类中的构造，跟父类一样的扩增方式，并且它的方法也是同步的，所以也是线程安全。
 
-![image-20210331133023382](https://fastly.jsdelivr.net/gh/oddfar/static/img/JavaSE-集合.assets/image-20210331133023382.png)
+![image-20220618214944054](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/Java%E9%9B%86%E5%90%88/20220618214945.png)
 
-### 4、总结Vector和Stack
+## 总结Vector和Stack
 
-【Vector总结（通过源码分析）】
+Vector 总结（通过源码分析）
 
-1. Vector线程安全是因为它的方法都加了synchronized关键字
-2. Vector的本质是一个数组，特点能是能够自动扩增，扩增的方式跟capacityIncrement的值有关
-3. 它也会fail-fast，还有一个fail-safe两个的区别在下面的list总结中会讲到。
+1. Vector 线程安全是因为它的方法都加了 Synchronized 关键字
+2. Vector 的本质是一个数组，特点能是能够自动扩增，扩增的方式跟 capacityIncrement 的值有关
+3. 它也会 fail-fast，还有一个 fail-safe 两个的区别在下面的 List 总结中会讲到
 
-【Stack的总结】
+Stack 的总结
 
 1. 对栈的一些操作，先进后出
-2. 底层也是用数组实现的，因为继承了Vector
+2. 底层也是用数组实现的，因为继承了 Vector
 3. 也是线程安全的
