--- a/docs/10.Java/05.Java集合 - Collection/09.TreeSet.md
+++ b/docs/10.Java/05.Java集合 - Collection/09.TreeSet.md
@@ -9,61 +9,52 @@ tags:
   - 
 ---
 
-## TreeSet
 
-**TreeSet简介**
 
-红-黑树的数据结构，默认对元素进行自然排序
+## TreeSet简介
 
-TreeSet 是一个有序的集合，它的作用是提供有序的Set集合。它继承于AbstractSet抽象类，实现了NavigableSet&ltE>, Cloneable, java.io.Serializable接口。
+TreeSet 是红黑树的数据结构，默认对元素进行自然排序。
 
-TreeSet 继承于AbstractSet，所以它是一个Set集合，具有Set的属性和方法。
-
-TreeSet 实现了NavigableSet接口，意味着它支持一系列的导航方法。比如查找与指定目标最匹配项。
-
-TreeSet 实现了Cloneable接口，意味着它能被克隆。
-
-TreeSet 实现了java.io.Serializable接口，意味着它支持序列化。
-
-TreeSet是基于TreeMap实现的。TreeSet中的元素支持2种排序方式：自然排序 或者 根据创建TreeSet 时提供的 Comparator 进行排序。这取决于使用的构造方法。
-
-TreeSet为基本操作（add、remove 和 contains）提供受保证的 log(n) 时间开销。
-另外，TreeSet是非同步的。 它的iterator 方法返回的迭代器是fail-fast的。
+- TreeSet 是一个有序的集合，它的作用是提供有序的 Set 集合。它继承于 AbstractSet 抽象类，实现了 `NavigableSet&ltE>, Cloneable, java.io.Serializable` 接口
+- TreeSet 继承于 AbstractSet，所以它是一个 Set 集合，具有 Set 的属性和方法
+- TreeSet 实现了 NavigableSet 接口，意味着它支持一系列的导航方法。比如查找与指定目标最匹配项
+- TreeSet 实现了 Cloneable 接口，意味着它能被克隆
+- TreeSet 实现了 `java.io.Serializable` 接口，意味着它支持序列化
+- TreeSet 是基于 TreeMap 实现的。TreeSet 中的元素支持 2 种排序方式：自然排序或者根据创建 TreeSet 时提供的 Comparator 进行排序。这取决于使用的构造方法
+- TreeSet 为基本操作（add、remove 和 contains）提供受保证的 log(n) 时间开销。另外，TreeSet 是非同步的。它的 iterator 方法返回的迭代器是 fail-fast 的
 
 **特点：**
 
 - 元素有序，这里的顺序不是指存储和取出的顺序，而是按照一定的规则进行排序，具体排序方式取决于构造方法
 
-  TreeSet():根据其元素的自然非序进行排序
+  - TreeSet()：根据其元素的自然非序进行排序
 
-  TreeSet(Comparator comparator):根据指定的比较器进行排序
+  - TreeSet(Comparator comparator)：根据指定的比较器进行排序
 
-- 没有带索引的方法，所以不能使用普通for循环遍历
+- 没有带索引的方法，所以不能使用普通 for 循环遍历
 
-- 由于是Set集合，所以不包含重复元素的集合
-
-
-
-### TreeSet自然顺序
-
-即类要实现Comparable接口，并重写compareTo()方法，TreeSet对象调用add()方法时，会将存入的对象提升为Comparable类型，然后调用对象中的compareTo()方法进行比较，根据比较的返回值进行存储。
-
-因为TreeSet底层是二叉树，当compareTo方法返回0时，不存储；当compareTo方法返回正数时，存入二叉树的右子树；当compareTo方法返回负数时，存入二叉树的左子树。如果一个类没有实现Comparable接口就将该类对象存入TreeSet集合，会发生类型转换异常。
+- 由于是 Set 集合，所以不包含重复元素的集合
 
 
-### TreeSet自定义排序
+
+## TreeSet自然顺序
+
+即类要实现 Comparable 接口，并重写 `compareTo()` 方法，TreeSet 对象调用 `add()` 方法时，会将存入的对象提升为 Comparable 类型，然后调用对象中的 `compareTo()` 方法进行比较，根据比较的返回值进行存储。
+
+因为 TreeSet 底层是二叉树，当 compareTo 方法返回 0 时，不存储；当 compareTo 方法返回正数时，存入二叉树的右子树；当 compareTo 方法返回负数时，存入二叉树的左子树。如果一个类没有实现 Comparable 接口就将该类对象存入 TreeSet 集合，会发生类型转换异常。
+
+
+## TreeSet自定义排序
 
 方式一：元素自身具备比较性
 
-元素自身具备比较性，需要元素实现Comparable接口，重写compareTo方法，也就是让元素自身具备比较性，这种方式叫做元素的自然排序也叫做默认排序。
+元素自身具备比较性，需要元素实现 Comparable 接口，重写 compareTo 方法，也就是让元素自身具备比较性，这种方式叫做元素的自然排序也叫做默认排序。
 
 **让元素自身具备比较性**
 
+也就是元素需要实现 Comparable 接口，覆盖 compareTo 方法。
 
-
-也就是元素需要实现Comparable接口，覆盖compareTo 方法。
-
-案例：创建Student类，有姓名，年龄。存入集合后，先根据年龄大小，再根据姓名来进行排序插入集合中
+案例：创建 Student 类，有姓名，年龄。存入集合后，先根据年龄大小，再根据姓名来进行排序插入集合中
 
 ```java
 public class Student implements Comparable<Student> {
@@ -77,18 +68,18 @@ public class Student implements Comparable<Student> {
 
     @Override
     public int compareTo(Student o) {
-        int i = this.age-o.age;
-        int n = i==0?this.name.compareTo(o.name):i;
+        int i = this.age - o.age;
+        int n = i == 0 ? this.name.compareTo(o.name) : i;
         return n;
     }
 }
 ```
 
-重写compareTo()方法，返回值有三种情况
+重写 `compareTo()` 方法，返回值有三种情况
 
-1. 返回值为0：不插入集合
-2. 返回值为1：往后插入集合
-3. 返回值为-1：往前插入集合
+1. 返回值为 0：不插入集合
+2. 返回值为 1：往后插入集合
+3. 返回值为 -1：往前插入集合
 
 ```java
 public class Demo {
@@ -117,19 +108,17 @@ public class Demo {
 }
 ```
 
-
-
 **让容器自身具备比较性，自定义比较器。**
 
 需求：当元素自身不具备比较性，或者元素自身具备的比较性不是所需的。
 
 那么这时只能让容器自身具备。
 
-定义一个类实现Comparator 接口，覆盖compare方法。
+定义一个类实现 Comparator 接口，覆盖 compare 方法。
 
-并将该接口的子类对象作为参数传递给TreeSet集合的构造函数。
+并将该接口的子类对象作为参数传递给 TreeSet 集合的构造函数。
 
-当Comparable比较方式，及Comparator比较方式同时存在，以Comparator比较方式为主。
+当 Comparable 比较方式，及 Comparator 比较方式同时存在，以 Comparator 比较方式为主。
 
 
 ```java
@@ -152,7 +141,7 @@ class MyComparator implements Comparator {
 	public int compare(Object o1, Object o2) {
 		Book b1 = (Book) o1;
 		Book b2 = (Book) o2;
-		System.out.println(b1+" comparator "+b2);
+		System.out.println(b1+ " comparator "+b2);
 		if (b1.getPrice() > b2.getPrice()) {
 			return 1;
 		}
@@ -161,7 +150,6 @@ class MyComparator implements Comparator {
 		}
 		return b1.getName().compareTo(b2.getName());
 	}
- 
 }
  
 class Book {
