--- a/docs/10.Java/10.Java优化 - JUC/06.JUC - 共享模型之管程安全.md
+++ b/docs/10.Java/10.Java优化 - JUC/06.JUC - 共享模型之管程安全.md
@@ -91,7 +91,7 @@ isub // 自减
 putstatic i // 将修改后的值存入静态变量 i
 ```
 
-所以极有可能 i 自增后，没有讲修改后的值存入 i，就被 i 自减后存入了，导致最后自增的值覆盖掉自减的值。
+所以极有可能 i 自增后，没有将修改后的值存入 i，就被 i 自减后存入了，导致最后自增的值覆盖掉自减的值。
 
 而 Java 的内存模型如下，完成静态变量的自增，自减需要在主存和工作内存中进行数据交换（双向箭头）：
 
@@ -908,7 +908,7 @@ public class MyServlet extends HttpServlet {
 
 ```java
 public class MyServlet extends HttpServlet {
-    // 是否安全？不安全，因为
+    // 是否安全？不安全，
     private UserService userService = new UserServiceImpl();
 
     public void doGet(HttpServletRequest request, HttpServletResponse response) {
