--- a/docs/10.Java/20.Java底层 - JVM/13.JVM - 本地方法栈.md
+++ b/docs/10.Java/20.Java底层 - JVM/13.JVM - 本地方法栈.md
@@ -37,4 +37,4 @@ Java 虚拟机栈于管理 Java 方法的调用，而 **本地方法栈用于管
 
 并不是所有的 JVM 都支持本地方法。因为 Java 虚拟机规范并没有明确要求本地方法栈的使用语言、具体实现方式、数据结构等。如果 JVM 产品不打算支持 native 方法，也可以无需实现本地方法栈。
 
-在 Hotspot JVM 中，直接将本地方法栈和虚拟机栈合二为一。
+在 Hotspot JVM 中，**直接将本地方法栈和虚拟机栈合二为一**。
