--- a/docs/10.Java/20.Java底层 - JVM/19.JVM - 对象实例化内存布局与访问定位.md
+++ b/docs/10.Java/20.Java底层 - JVM/19.JVM - 对象实例化内存布局与访问定位.md
@@ -104,14 +104,15 @@ public class ObjectTest {
 
 ### 初始化分配到的内存
 
-给对象属性赋值的操作
+给对象属性赋值的操作：
 
 - 属性的默认初始化
 - 显示初始化
 - 代码块中的初始化
 - 构造器初始化
 
-- 所有属性设置默认值，保证对象实例字段在不赋值可以直接使用
+
+所有属性设置默认值，保证对象实例字段在不赋值可以直接使用。
 
 
 ### 设置对象的对象头
@@ -186,7 +187,8 @@ Customer 类的字节码
 - 处理并发问题
 - 属性的默认初始化（零值初始化）
 - 设置对象头信息
-- 属性的显示初始化、代码块中初始化、构造器中初始化
+- 调用 init 方法进行初始化（属性的显示初始化、代码块中初始化、构造器中初始化）
+- 在线程栈中新建对象引用，并指向堆中刚刚新建的对象实例
 
 ## 对象内存布局
 
@@ -205,17 +207,17 @@ Customer 类的字节码
 - 锁状态标志
 - 线程持有的锁
 - 偏向线程ID
-- 翩向时间戳
+- 偏向时间戳
 
 > 类型指针
 
-指向类元数据 InstanceKlass，确定该对象所属的类型。指向的其实是方法区中存放的类元信息
+指向类元数据 InstanceKlass，确定该对象所属的类型。指向的其实是方法区中存放的类元信息。
 
 ### 实例数据(Instance Data)
 
 > 说明
 
-它是对象真正存储的有效信息，包括程序代码中定义的各种类型的字段(包括从父类继承下来的和本身拥有的字段)。
+它是对象真正存储的有效信息，包括程序代码中定义的各种类型的字段（包括从父类继承下来的和本身拥有的字段）。
 
 ### 对齐填充(Padding)
 
