--- a/docs/10.Java/20.Java底层 - JVM/29.JVM - 垃圾回收相关算法.md
+++ b/docs/10.Java/20.Java底层 - JVM/29.JVM - 垃圾回收相关算法.md
@@ -25,7 +25,7 @@ tags:
 
 引用计数算法（Reference Counting）比较简单，对每个对象保存一个整型的 **引用计数器属性**。**用于记录对象被引用的情况**。
 
-对于一个对象 A，只要有任何一个对象引用了 A，则 A 的引用计数器就加 1；当引用失效时，引用计数器就减1。只要对象 A 的引用计数器的值为 0，即表示对象 A 不可能再被使用，可进行回收。
+对于一个对象 A，只要有任何一个对象引用了 A，则 A 的引用计数器就加 1；当引用失效时，引用计数器就减 1。只要对象 A 的引用计数器的值为 0，即表示对象 A 不可能再被使用，可进行回收。
 
 优点：
 
@@ -185,7 +185,7 @@ Java 语言提供了 **对象终止（finalization）机制** 来允许开发人
 
 ### 注意
 
-永远不要主动调用某个对象的 `finalize()` 方法应该交给垃圾回收机制调用。理由包括下面三点：
+永远不要主动调用某个对象的 `finalize()` 方法，它应该交给垃圾回收机制调用。理由包括下面三点：
 
 - 在 `finalize()` 时可能会导致对象复活
 - `finalize()` 方法的执行时间是没有保障的，它完全由 GC 线程决定，极端情况下，若不发生 GC，则 `finalize()` 方法将没有执行机会
@@ -482,7 +482,7 @@ public class HeapOOM {
 
 这里所谓的清除并不是真的置空，而是把需要清除的对象地址保存在空闲的地址列表里。下次有新对象需要加载时，判断垃圾的位置空间是否够，如果够，就存放覆盖原有的地址。
 
-关于空闲列表是在为对象分配内存的时候 提过
+关于空闲列表是在为对象分配内存的时候提过
 
 - 如果内存规整
   - 采用指针碰撞的方式进行内存分配
@@ -591,7 +591,7 @@ public class HeapOOM {
 
 在 Java 程序运行的过程中，会产生大量的对象，其中有些对象是与业务信息相关，比如 Http 请求中的 Session 对象、线程、Socket 连接，这类对象跟业务直接挂钩，因此生命周期比较长。但是还有一些对象，主要是程序运行过程中生成的临时变量，这些对象生命周期会比较短，比如：String 对象，由于其不变类的特性，系统会产生大量的这些对象，有些对象甚至只用一次即可回收。
 
-目前几乎所有的 GC 都采用分代手机算法执行垃圾回收的。
+目前几乎所有的 GC 都采用分代收集算法执行垃圾回收的。
 
 在 HotSpot 中，基于分代的概念，GC 所使用的内存回收算法必须结合年轻代和老年代各自的特点。
 
@@ -623,7 +623,7 @@ public class HeapOOM {
 
 如果一次性将所有的垃圾进行处理，需要造成系统长时间的停顿，那么就可以让垃圾收集线程和应用程序线程交替执行。每次，垃圾收集线程只收集一小片区域的内存空间，接着切换到应用程序线程。依次反复，直到垃圾收集完成。
 
-总的来说，增量收集算法的基础仍是传统的标记-清除和复制算法。**增量收集算法通过对线程间冲突的妥善处理**，允许垃圾收集线程以分阶段的方式完成标记、清理或复制工作
+总的来说，增量收集算法的基础仍是传统的标记-清除和复制算法。**增量收集算法通过对线程间冲突的妥善处理**，允许垃圾收集线程以分阶段的方式完成标记、清理或复制工作。
 
 ### 缺点
 
