--- a/docs/20.数据库/05.关系数据库 - MySQL/10.MySQL - 检测优化SQL.md
+++ b/docs/20.数据库/05.关系数据库 - MySQL/10.MySQL - 检测优化SQL.md
@@ -23,7 +23,7 @@ tags:
 
 MySQL 客户端连接成功后，通过 `show [session|global] status` 命令可以提供服务器状态信息。
 
-show [session|global] status 可以根据需要加上参数“session”或者“global”来显示 session 级（当前连接）的计结果和 global 级（自数据库上次启动至今）的统计结果。如果不写，默认使用参数是“session”。
+`show [session|global] status` 可以根据需要加上参数 session 或者 global 来显示 session 级（当前连接）的计结果或 global 级（自数据库上次启动至今）的统计结果。如果不写，默认使用参数是 session。
 
 下面的命令显示了当前 session 中所有统计参数的值：
 
@@ -55,46 +55,44 @@ show status like 'Innodb_rows_%';
 | Uptime               | 服务器工作时间。                                             |
 | Slow_queries         | 慢查询的次数。                                               |
 
-Com_***      :  这些参数对于所有存储引擎的表操作都会进行累计。
+Com_***: 这些参数对于所有存储引擎的表操作都会进行累计。
 
-Innodb_*** :  这几个参数只是针对InnoDB 存储引擎的，累加的算法也略有不同。
+Innodb_***: 这几个参数只是针对 InnoDB 存储引擎的，累加的算法也略有不同。
 
 ## 定位低效率执行SQL
 
-
-
 - 慢查询日志 
 
-   通过慢查询日志定位那些执行效率较低的 SQL 语句，用 log-slow-queries[file_name] 选项启动时，mysqld 写一个包含所有执行时间超过 long_query_time 秒的 SQL 语句的日志文件。具体可以查看日志管理的相关部分。
+   通过慢查询日志定位那些执行效率较低的 SQL 语句，用 `log-slow-queries[file_name]` 选项启动时，mysqld 写一个包含所有执行时间超过 long_query_time 秒的 SQL 语句的日志文件。具体可以查看日志管理的相关部分。
 
 - show processlist  
 
-  慢查询日志在查询结束以后才纪录，所以在应用反映执行效率出现问题的时候查询慢查询日志并不能定位问题，可以使用 `show processlist` 命令查看当前MySQL在进行的线程，包括线程的状态、是否锁表等，可以实时地查看 SQL 的执行情况，同时对一些锁表操作进行优化。
+  慢查询日志在查询结束以后才纪录，所以在应用反映执行效率出现问题的时候查询慢查询日志并不能定位问题，可以使用 `show processlist` 命令查看当前 MySQL 在进行的线程，包括线程的状态、是否锁表等，可以实时地查看 SQL 的执行情况，同时对一些锁表操作进行优化。
 
 ![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/MySQL/20211024150304.png)
 
-1） id列，用户登录mysql时，系统分配的"connection_id"，可以使用函数connection_id()查看
+1）id 列，用户登录 MySQL 时，系统分配的 connection_id，可以使用函数 `connection_id()` 查看
 
-2） user列，显示当前用户。如果不是root，这个命令就只显示用户权限范围的sql语句
+2）user 列，显示当前用户。如果不是 root，这个命令就只显示用户权限范围的 SQL 语句
 
-3） host列，显示这个语句是从哪个ip的哪个端口上发的，可以用来跟踪出现问题语句的用户
+3）host 列，显示这个语句是从哪个 IP 的哪个端口上发的，可以用来跟踪出现问题语句的用户
 
-4） db列，显示这个进程目前连接的是哪个数据库
+4）db 列，显示这个进程目前连接的是哪个数据库
 
-5） command列，显示当前连接的执行的命令，一般取值为休眠（sleep），查询（query），连接（connect）等
+5）command 列，显示当前连接的执行的命令，一般取值为休眠（sleep），查询（query），连接（connect）等
 
-6） time列，显示这个状态持续的时间，单位是秒
+6）time 列，显示这个状态持续的时间，单位是秒
 
-7） state列，显示使用当前连接的sql语句的状态，很重要的列。state描述的是语句执行中的某一个状态。一个sql语句，以查询为例，可能需要经过copying to tmp table、sorting result、sending data等状态才可以完成
+7）state 列，显示使用当前连接的 SQL 语句的状态，很重要的列。state 描述的是语句执行中的某一个状态。一个 SQL语句，以查询为例，可能需要经过copying to tmp table、sorting result、sending data 等状态才可以完成
 
-8） info列，显示这个sql语句，是判断问题语句的一个重要依据
+8）info 列，显示这个 SQL 语句，是判断问题语句的一个重要依据
 
 ## explain分析执行计划
 
-通过 EXPLAIN 或者 DESC命令获取 MySQL 如何执行 SELECT 语句的信息，包括在 SELECT 语句执行过程中表如何连接和连接的顺序。
+通过 EXPLAIN 或者 DESC 命令获取 MySQL 如何执行 SELECT 语句的信息，包括在 SELECT 语句执行过程中表如何连接和连接的顺序。
 
 ```sql
-explain  select * from tb_item where id = 1;
+explain select * from tb_item where id = 1;
 ```
 
 ![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/MySQL/20211024150334.png)
@@ -105,10 +103,10 @@ explain  select * from tb_item where id = 1;
 
 | 字段          | 含义                                                         |
 | ------------- | ------------------------------------------------------------ |
-| id            | select查询的序列号，是一组数字，表示的是查询中执行select子句或者是操作表的顺序。 |
+| id            | SELECT 查询的序列号，是一组数字，表示的是查询中执行 SELECT 子句或者是操作表的顺序。 |
 | select_type   | 表示 SELECT 的类型，常见的取值有 SIMPLE（简单表，即不使用表连接或者子查询）、PRIMARY（主查询，即外层的查询）、UNION（UNION 中的第二个或者后面的查询语句）、SUBQUERY（子查询中的第一个 SELECT）等 |
 | table         | 输出结果集的表                                               |
-| type          | 表示表的连接类型，性能由好到差的连接类型为( system ---> const -----> eq_ref ------> ref -------> ref_or_null----> index_merge ---> index_subquery -----> range -----> index ------> all ) |
+| type          | 表示表的连接类型，性能由好到差的连接类型为（system ---> const -----> eq_ref ------> ref -------> ref_or_null----> index_merge ---> index_subquery -----> range -----> index ------> all） |
 | possible_keys | 表示查询时，可能使用的索引                                   |
 | key           | 表示实际使用的索引                                           |
 | key_len       | 索引字段的长度                                               |
@@ -168,9 +166,9 @@ INSERT INTO user_role(id,user_id,role_id) VALUES(NULL, '1', '5'),(NULL, '1', '7'
 
 ### explain 之 id
 
-id 字段是 select查询的序列号，是一组数字，表示的是查询中执行select子句或者是操作表的顺序。id 情况有三种 
+id 字段是 SELECT 查询的序列号，是一组数字，表示的是查询中执行 SELECT 子句或者是操作表的顺序。id 情况有三种 
 
-1） id 相同表示加载表的顺序是从上到下。
+1）id 相同表示加载表的顺序是从上到下。
 
 ```sql
 explain select * from t_role r, t_user u, user_role ur where r.id = ur.role_id and u.id = ur.user_id ;
@@ -178,7 +176,7 @@ explain select * from t_role r, t_user u, user_role ur where r.id = ur.role_id a
 
 ![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/MySQL/20211024150358.png)
 
-2） id 不同id值越大，优先级越高，越先被执行。 
+2）id 不同，且 id 值越大，优先级越高，越先被执行（如下先执行 3，再执行 2，最后执行 1）。 
 
 ```sql
 EXPLAIN SELECT * FROM t_role WHERE id = (SELECT role_id FROM user_role WHERE user_id = (SELECT id FROM t_user WHERE username = 'stu1'))
@@ -186,7 +184,7 @@ EXPLAIN SELECT * FROM t_role WHERE id = (SELECT role_id FROM user_role WHERE use
 
 ![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/MySQL/20211024150407.png)
 
-3） id 有相同，也有不同，同时存在。id相同的可以认为是一组，从上往下顺序执行；在所有的组中，id的值越大，优先级越高，越先执行。
+3）id 有相同，也有不同，同时存在。id 相同的可以认为是一组，从上往下顺序执行；在所有的组中，id 的值越大，优先级越高，越先执行。
 
 ```sql
 EXPLAIN SELECT * FROM t_role r , (SELECT * FROM user_role ur WHERE ur.`user_id` = '2') a WHERE r.id = a.role_id ; 
@@ -200,12 +198,12 @@ EXPLAIN SELECT * FROM t_role r , (SELECT * FROM user_role ur WHERE ur.`user_id` 
 
 | select_type  | 含义                                                         |
 | ------------ | ------------------------------------------------------------ |
-| SIMPLE       | 简单的select查询，查询中不包含子查询或者UNION                |
+| SIMPLE       | 简单的 SELECT 查询，查询中不包含子查询或者 UNION             |
 | PRIMARY      | 查询中若包含任何复杂的子查询，最外层查询标记为该标识         |
-| SUBQUERY     | 在SELECT 或 WHERE 列表中包含了子查询                         |
-| DERIVED      | 在FROM 列表中包含的子查询，被标记为 DERIVED（衍生） MYSQL会递归执行这些子查询，把结果放在临时表中 |
-| UNION        | 若第二个SELECT出现在UNION之后，则标记为UNION ； 若UNION包含在FROM子句的子查询中，外层SELECT将被标记为 ： DERIVED |
-| UNION RESULT | 从UNION表获取结果的SELECT                                    |
+| SUBQUERY     | 在 SELECT 或 WHERE 列表中包含了子查询                        |
+| DERIVED      | 在 FROM 列表中包含的子查询，被标记为 DERIVED（衍生），MySQL 会递归执行这些子查询，把结果放在临时表中 |
+| UNION        | 若第二个 SELECT 出现在 UNION 之后，则标记为 UNION；若 UNION 包含在 FROM 子句的子查询中，外层 SELECT 将被标记为：DERIVED |
+| UNION RESULT | 从 UNION 表获取结果的 SELECT                                 |
 
 - SIMPLE
 
@@ -231,23 +229,19 @@ EXPLAIN SELECT * FROM t_role r , (SELECT * FROM user_role ur WHERE ur.`user_id` 
 
 - DERIVED
 
-  在 FROM 列表中包含的子查询被标记为 DERIVED(衍生)，MySQL 会递归执行这些子查询, 把结果放在临时表里。
+  在 FROM 列表中包含的子查询被标记为 DERIVED（衍生），MySQL 会递归执行这些子查询, 把结果放在临时表里。
 
   ```sql
   explain select a.* from (select * from t_user where id in('1','2') ) a;
   ```
 
-  mysql 5.7 中为 `simple`
+  MySQL 5.7 中为 `simple`
 
   ![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/MySQL/20211024150453.png)
 
-  
-
-  mysql 5.6 中：
+  MySQL 5.6 中：
 
   ![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/MySQL/20211024150502.png)
-
-  
 
 - union
 
@@ -257,17 +251,13 @@ EXPLAIN SELECT * FROM t_role r , (SELECT * FROM user_role ur WHERE ur.`user_id` 
 
   ![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/MySQL/20211024150604.png)
 
-
-
 ### explain 之 table
 
-展示这一行的数据是关于哪一张表的 
+展示这一行的数据是关于哪一张表的。 
 
 没有与之关系的表为 NULL
 
 ![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/MySQL/20211024150614.png)
-
-
 
 ### explain 之 type
 
@@ -275,13 +265,13 @@ type 显示的是访问类型，是较为重要的一个指标，可取值为：
 
 | type   | 含义                                                         |
 | ------ | ------------------------------------------------------------ |
-| NULL   | MySQL不访问任何表，索引，直接返回结果                        |
-| system | 表只有一行记录(等于系统表)，这是const类型的特例，一般不会出现 |
-| const  | 表示通过索引一次就找到了，const 用于比较primary key 或者 unique 索引。因为只匹配一行数据，所以很快。如将主键置于where列表中，MySQL 就能将该查询转换为一个常亮。const于将 "主键" 或 "唯一" 索引的所有部分与常量值进行比较 |
-| eq_ref | 类似ref，区别在于使用的是唯一索引，使用主键的关联查询，关联查询出的记录只有一条。常见于主键或唯一索引扫描 |
+| NULL   | MySQL 不访问任何表，索引，直接返回结果                       |
+| system | 表只有一行记录（等于系统表），这是 const 类型的特例，一般不会出现 |
+| const  | 表示通过索引一次就找到了，const 用于比较 primary key 或者 unique 索引。因为只匹配一行数据，所以很快。如将主键置于 where 列表中，MySQL 就能将该查询转换为一个常亮。const 用于将 "主键" 或 "唯一" 索引的所有部分与常量值进行比较 |
+| eq_ref | 类似 ref，区别在于这代表使用的是唯一索引，使用主键的关联查询，关联查询出的记录只有一条。常见于主键或唯一索引扫描 |
 | ref    | 非唯一性索引扫描，返回匹配某个单独值的所有行。本质上也是一种索引访问，返回所有匹配某个单独值的所有行（多个） |
-| range  | 只检索给定返回的行，使用一个索引来选择行。 where 之后出现 between ， < , > ，in 等操作。 |
-| index  | index 与 ALL的区别为 index 类型只是遍历了索引树， 通常比ALL 快， ALL 是遍历数据文件。 |
+| range  | 只检索给定返回的行，使用一个索引来选择行。 where 之后出现 between，<，>，in 等操作 |
+| index  | index 与 ALL 的区别为 index 类型只是遍历了索引树，通常比 ALL 快，ALL 是遍历数据文件 |
 | all    | 将遍历全表以找到匹配的行                                     |
 
 结果值从最好到最坏以此是：
@@ -290,23 +280,21 @@ type 显示的是访问类型，是较为重要的一个指标，可取值为：
 
 - system > const > eq_ref > ref > range > index > ALL
 
-<mark>一般来说， 我们需要保证查询至少达到 range 级别， 最好达到ref </mark>
+一般来说，**我们需要保证查询至少达到 range 级别，最好达到 ref**。
 
 ### explain 之 key
 
+- possible_keys:
 
-
-- possible_keys :
-
-  显示可能应用在这张表的索引， 一个或多个。 
+  显示可能应用在这张表的索引，一个或多个。 
 
 - key 
 
-  实际使用的索引， 如果为NULL， 则没有使用索引。
+  实际使用的索引，如果为 NULL，则没有使用索引。
 
 - key_len 
 
-  表示索引中使用的字节数， 该值为索引字段最大可能长度，并非实际使用长度，在不损失精确性的前提下， 长度越短越好 。
+  表示索引中使用的字节数，该值为索引字段最大可能长度，并非实际使用长度，在不损失精确性的前提下，长度越短越好。
 
 ###  explain 之 rows
 
@@ -314,33 +302,35 @@ type 显示的是访问类型，是较为重要的一个指标，可取值为：
 
 ### explain 之 extra
 
-其他的额外的执行计划信息，在该列展示 。
+其他的额外的执行计划信息，在该列展示。
 
-| extra            | 含义                                                         |
-| ---------------- | ------------------------------------------------------------ |
-| using  filesort  | 说明mysql会对数据使用一个外部的索引排序，而不是按照表内的索引顺序进行读取， 称为 “文件排序”，效率低。 |
-| using  temporary | 使用了临时表保存中间结果，MySQL在对查询结果排序时使用临时表。常见于 order by 和 group by； 效率低 |
-| using  index     | 表示相应的select操作使用了覆盖索引， 避免访问表的数据行， 效率不错。 |
+| extra           | 含义                                                         |
+| --------------- | ------------------------------------------------------------ |
+| using filesort  | 说明 MySQL 会对数据使用一个外部的索引排序，而不是按照表内的索引顺序进行读取， 称为「文件排序」，效率低。 |
+| using temporary | 使用了临时表保存中间结果，MySQL 在对查询结果排序时使用临时表。常见于 order by 和 group by；效率低 |
+| using index     | 表示相应的 select 操作使用了覆盖索引，避免访问表的数据行，效率不错。 |
+
+不是通过索引直接返回排序结果的排序都叫 fileSort 排序。
 
 ## show profile分析SQL
 
-Mysql从5.0.37版本开始增加了对 show profiles 和 show profile 语句的支持。
+MySQL 从 5.0.37 版本开始增加了对 show profiles 和 show profile 语句的支持。
 
-show profiles 能够在做SQL优化时帮助我们了解时间都耗费到哪里去了。
+show profiles 能够在做 SQL 优化时帮助我们了解时间都耗费到哪里去了。
 
-通过 have_profiling 参数，能够看到当前MySQL是否支持profile：
+通过 have_profiling 参数，能够看到当前 MySQL 是否支持 profile：
 
 ![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/MySQL/20211024150624.png)
 
-默认profiling是关闭的，可以通过set语句在Session级别开启profiling：
+默认 profiling 是关闭的，可以通过 set 语句在 Session 级别开启 profiling：
 
 ![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/MySQL/20211024150632.png)
 
 ```sql
-set profiling=1; //开启profiling 开关；
+set profiling=1; # 开启 profiling 开关；
 ```
 
-通过profile，我们能够更清楚地了解SQL执行的过程。
+通过 profile，我们能够更清楚地了解 SQL 执行的过程。
 
 我们可以执行一系列的操作：
 
@@ -356,45 +346,49 @@ select * from tb_item where id < 5;
 select count(*) from tb_item;
 ```
 
-执行完上述命令之后，再执行 `show profiles` 指令， 来查看SQL语句执行的耗时：
+执行完上述命令之后，再执行 `show profiles` 指令， 来查看 SQL 语句执行的耗时：
 
 ![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/MySQL/20211024150705.png)
 
-通过 `show  profile for  query  query_id` 语句查看该SQL执行过程中每个线程的状态和消耗的时间
+通过 `show profile for query query_id` 语句查看该 SQL 执行过程中每个线程的状态和消耗的时间
+
+```sql
+show profile cpu for query 6;
+```
 
 ![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/MySQL/20211024150717.png)
 
 TIP：Sending data 状态表示 MySQL 线程开始访问数据行并把结果返回给客户端，而不仅仅是返回个客户端。由于在 Sending data 状态下，MySQL 线程往往需要做大量的磁盘读取操作，所以经常是整各查询中耗时最长的状态。
 
-在获取到最消耗时间的线程状态后，MySQL支持进一步选择all、cpu、block io 、context switch、page faults等明细类型类查看MySQL在使用什么资源上耗费了过高的时间。例如，选择查看CPU的耗费时间  ：
+在获取到最消耗时间的线程状态后，MySQ L支持进一步选择 all、cpu、block io 、context switch、page faults 等明细类型类查看 MySQL 在使用什么资源上耗费了过高的时间。例如，选择查看 CPU 的耗费时间：
 
 ![](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/MySQL/20211024150726.png)
 
 | 字段       | 含义                           |
 | ---------- | ------------------------------ |
-| Status     | sql 语句执行的状态             |
-| Duration   | sql 执行过程中每一个步骤的耗时 |
-| CPU_user   | 当前用户占有的cpu              |
-| CPU_system | 系统占有的cpu                  |
+| Status     | SQL 语句执行的状态             |
+| Duration   | SQL 执行过程中每一个步骤的耗时 |
+| CPU_user   | 当前用户占有的 CPU             |
+| CPU_system | 系统占有的 CPU                 |
 
 ## trace分析优化器执行计划
 
-MySQL5.6提供了对SQL的跟踪trace，通过trace文件能够进一步了解为什么优化器选择A计划，而不是选择B计划。
+MySQL5.6 提供了对 SQL 的跟踪 trace，通过 trace 文件能够进一步了解为什么优化器选择 A 计划，而不是选择 B 计划。
 
-打开trace ， 设置格式为 JSON，并设置trace最大能够使用的内存大小，避免解析过程中因为默认内存过小而不能够完整展示。
+打开trace，设置格式为 JSON，并设置 trace 最大能够使用的内存大小，避免解析过程中因为默认内存过小而不能够完整展示。
 
 ```sql
 SET optimizer_trace="enabled=on",end_markers_in_json=on;
 set optimizer_trace_max_mem_size=1000000;
 ```
 
-执行SQL语句 ：
+执行 SQL 语句 ：
 
 ```sql
 select * from tb_item where id < 4;
 ```
 
-最后， 检查 information_schema.optimizer_trace 就可以知道MySQL是如何执行SQL的 ：
+最后，检查 information_schema.optimizer_trace 就可以知道 MySQL 是如何执行 SQL 的：
 
 ```sql
 select * from information_schema.optimizer_trace\G;
