--- a/docs/20.数据库/05.关系数据库 - MySQL/24.MySQL - 常用sql技巧.md
+++ b/docs/20.数据库/05.关系数据库 - MySQL/24.MySQL - 常用sql技巧.md
@@ -1,5 +1,5 @@
 ---
-title: MySQL - 常用sql
+title: MySQL - 常用SQL技巧
 permalink: /mysql/common-use-sql-skill/
 date: 2021-10-24 15:40:25
 categories: 
@@ -63,24 +63,24 @@ LIMIT		<limit_params>
 
 正则表达式（Regular Expression）是指一个用来描述或者匹配一系列符合某个句法规则的字符串的单个字符串。
 
-| 符号   | 含义                          |
-| ------ | ----------------------------- |
-| ^      | 在字符串开始处进行匹配        |
-| $      | 在字符串末尾处进行匹配        |
-| .      | 匹配任意单个字符，包括换行符  |
-| [...]  | 匹配出括号内的任意字符        |
-| [^...] | 匹配不出括号内的任意字符      |
-| a*     | 匹配零个或者多个a(包括空串)   |
-| a+     | 匹配一个或者多个a(不包括空串) |
-| a?     | 匹配零个或者一个a             |
-| a1\|a2 | 匹配a1或a2                    |
-| a(m)   | 匹配m个a                      |
-| a(m,)  | 至少匹配m个a                  |
-| a(m,n) | 匹配m个a 到 n个a              |
-| a(,n)  | 匹配0到n个a                   |
-| (...)  | 将模式元素组成单一元素        |
+| 符号   | 含义                             |
+| ------ | -------------------------------- |
+| ^      | 在字符串开始处进行匹配           |
+| $      | 在字符串末尾处进行匹配           |
+| .      | 匹配任意单个字符，包括换行符     |
+| [...]  | 匹配出括号内的任意字符           |
+| [^...] | 匹配不出括号内的任意字符         |
+| a*     | 匹配零个或者多个a （包括空串）   |
+| a+     | 匹配一个或者多个 a（不包括空串） |
+| a?     | 匹配零个或者一个 a               |
+| a1\|a2 | 匹配 a1 或 a2                    |
+| a(m)   | 匹配 m 个 a                      |
+| a(m,)  | 至少匹配 m 个 a                  |
+| a(m,n) | 匹配 m 个 a 到 n 个 a            |
+| a(,n)  | 匹配 0 到 n 个 a                 |
+| (...)  | 将模式元素组成单一元素           |
 
-```
+```sql
 select * from emp where name regexp '^T';
 
 select * from emp where name regexp '2$';
@@ -94,24 +94,24 @@ select * from emp where name regexp '[uvw]';
 
 数字函数
 
-| 函数名称        | 作 用                                                      |
-| --------------- | ---------------------------------------------------------- |
-| ABS             | 求绝对值                                                   |
-| SQRT            | 求二次方根                                                 |
-| MOD             | 求余数                                                     |
-| CEIL 和 CEILING | 两个函数功能相同，都是返回不小于参数的最小整数，即向上取整 |
-| FLOOR           | 向下取整，返回值转化为一个BIGINT                           |
-| RAND            | 生成一个0~1之间的随机数，传入整数参数是，用来产生重复序列  |
-| ROUND           | 对所传参数进行四舍五入                                     |
-| SIGN            | 返回参数的符号                                             |
-| POW 和 POWER    | 两个函数的功能相同，都是所传参数的次方的结果值             |
-| SIN             | 求正弦值                                                   |
-| ASIN            | 求反正弦值，与函数 SIN 互为反函数                          |
-| COS             | 求余弦值                                                   |
-| ACOS            | 求反余弦值，与函数 COS 互为反函数                          |
-| TAN             | 求正切值                                                   |
-| ATAN            | 求反正切值，与函数 TAN 互为反函数                          |
-| COT             | 求余切值                                                   |
+| 函数名称        | 作 用                                                       |
+| --------------- | ----------------------------------------------------------- |
+| ABS             | 求绝对值                                                    |
+| SQRT            | 求二次方根                                                  |
+| MOD             | 求余数                                                      |
+| CEIL 和 CEILING | 两个函数功能相同，都是返回不小于参数的最小整数，即向上取整  |
+| FLOOR           | 向下取整，返回值转化为一个 BIGINT                           |
+| RAND            | 生成一个 0~1 之间的随机数，传入整数参数是，用来产生重复序列 |
+| ROUND           | 对所传参数进行四舍五入                                      |
+| SIGN            | 返回参数的符号                                              |
+| POW 和 POWER    | 两个函数的功能相同，都是所传参数的次方的结果值              |
+| SIN             | 求正弦值                                                    |
+| ASIN            | 求反正弦值，与函数 SIN 互为反函数                           |
+| COS             | 求余弦值                                                    |
+| ACOS            | 求反余弦值，与函数 COS 互为反函数                           |
+| TAN             | 求正切值                                                    |
+| ATAN            | 求反正切值，与函数 TAN 互为反函数                           |
+| COT             | 求余切值                                                    |
 
 字符串函数
 
@@ -141,11 +141,11 @@ select * from emp where name regexp '[uvw]';
 | DAYNAME                 | 获取指定曰期对应的星期几的英文名称                           |
 | DAYOFWEEK               | 获取指定日期对应的一周的索引位置值                           |
 | WEEK                    | 获取指定日期是一年中的第几周，返回值的范围是否为 0〜52 或 1〜53 |
-| DAYOFYEAR               | 获取指定曰期是一年中的第几天，返回值范围是1~366              |
-| DAYOFMONTH              | 获取指定日期是一个月中是第几天，返回值范围是1~31             |
+| DAYOFYEAR               | 获取指定曰期是一年中的第几天，返回值范围是 1~366             |
+| DAYOFMONTH              | 获取指定日期是一个月中是第几天，返回值范围是 1~31            |
 | YEAR                    | 获取年份，返回值范围是 1970〜2069                            |
 | TIME_TO_SEC             | 将时间参数转换为秒数                                         |
-| SEC_TO_TIME             | 将秒数转换为时间，与TIME_TO_SEC 互为反函数                   |
+| SEC_TO_TIME             | 将秒数转换为时间，与 TIME_TO_SEC 互为反函数                  |
 | DATE_ADD 和 ADDDATE     | 两个函数功能相同，都是向日期添加指定的时间间隔               |
 | DATE_SUB 和 SUBDATE     | 两个函数功能相同，都是向日期减去指定的时间间隔               |
 | ADDTIME                 | 时间加法运算，在原始时间上添加指定的时间                     |
