--- a/docs/20.数据库/05.关系数据库 - MySQL/26.MySQL - 常用工具.md
+++ b/docs/20.数据库/05.关系数据库 - MySQL/26.MySQL - 常用工具.md
@@ -14,7 +14,7 @@ tags:
 
 ## mysql
 
-该mysql不是指mysql服务，而是指mysql的客户端工具。
+该 MySQL 不是指 MySQL 服务，而是指 MySQL 的客户端工具。
 
 **语法 ：**
 
@@ -24,12 +24,12 @@ mysql [options] [database]
 
 **连接选项：**
 
-| 参数               | 说明               |
-| ------------------ | ------------------ |
-| -u, --user=txt     | 指定用户名         |
-| -p, --password=txt | 指定密码           |
-| -h, --host=txt     | 指定服务器IP或域名 |
-| -p, --port=#       | 指定连接端口       |
+| 参数                 | 说明                 |
+| -------------------- | -------------------- |
+| -u 或 --user=txt     | 指定用户名           |
+| -p 或 --password=txt | 指定密码             |
+| -h 或 --host=txt     | 指定服务器 IP 或域名 |
+| -P 或 --port=txt     | 指定连接端口         |
 
 
 示例 ：
@@ -42,11 +42,11 @@ mysql -h127.0.0.1 -P3306 -uroot -p2143	-- 可不加空格
 
 **执行选项**
 
-| 参数               | 说明              |
-| ------------------ | ----------------- |
-| -e, --execute=name | 执行SQL语句并退出 |
+| 参数                 | 说明                |
+| -------------------- | ------------------- |
+| -e 或 --execute=name | 执行 SQL 语句并退出 |
 
-此选项可以在Mysql客户端执行SQL语句，而不用连接到MySQL数据库再执行，对于一些批处理脚本，这种方式尤其方便。
+此选项可以在 MySQL 客户端执行 SQL 语句，而不用连接到 MySQL 数据库再执行，对于一些批处理脚本，这种方式尤其方便。
 
 示例：
 
@@ -66,8 +66,6 @@ mysqladmin 是一个执行管理操作的客户端程序。可以用它来检查
 mysqladmin --help
 ```
 
-
-
 ![1555326108697](https://fastly.jsdelivr.net/gh/Kele-Bingtang/static/img/MySQL/20211226214850.png)
 
 示例 ： 
@@ -80,9 +78,9 @@ mysqladmin -uroot -p2143 version;
 
 ## mysqlbinlog
 
-由于服务器生成的二进制日志文件以二进制格式保存，所以如果想要检查这些文本的文本格式，就会使用到mysqlbinlog 日志管理工具。
+由于服务器生成的二进制日志文件以二进制格式保存，所以如果想要检查这些文本的文本格式，就会使用到 mysqlbinlog 日志管理工具。
 
-语法 ：
+语法：
 
 ```sh
 mysqlbinlog [options]  log-files1 log-files2 ...
@@ -97,11 +95,9 @@ mysqlbinlog [options]  log-files1 log-files2 ...
 | --start-datatime=date1  --stop-datetime=date2 | 指定日期间隔内的所有日志。                   |
 | --start-position=pos1 --stop-position=pos2    | 指定位置间隔内的所有日志。                   |
 
-
-
 ## mysqldump
 
-mysqldump 客户端工具用来备份数据库或在不同数据库之间进行数据迁移。备份内容包含创建表，及插入表的SQL语句。
+mysqldump 客户端工具用来备份数据库或在不同数据库之间进行数据迁移。备份内容包含创建表，及插入表的 SQL 语句。
 
 语法 ：
 
@@ -122,20 +118,16 @@ mysqldump [options] --all-databases/-A
 | -h, --host=name       | 指定服务器IP或域名 |
 | -P, --port=#          | 指定连接端口       |
 
-​	
-
 **输出内容选项**
 
-
-
-| 参数                 | 说明                                                         |
-| -------------------- | ------------------------------------------------------------ |
-| --add-drop-database  | 在每个数据库创建语句前加上 Drop database 语句                |
-| --add-drop-table     | 在每个表创建语句前加上 Drop table 语句 , 默认开启 ; 不开启 (--skip-add-drop-table) |
-| -n, --no-create-db   | 不包含数据库的创建语句                                       |
-| -t, --no-create-info | 不包含数据表的创建语句                                       |
-| -d --no-data         | 不包含数据                                                   |
-| -T, --tab=name       | 自动生成两个文件：<br/>一个.sql文件，创建表结构的语句；<br/>一个.txt文件，数据文件，相当于 select into outfile ； |
+| 参数                   | 说明                                                         |
+| ---------------------- | ------------------------------------------------------------ |
+| --add-drop-database    | 在每个数据库创建语句前加上 Drop database 语句                |
+| --add-drop-table       | 在每个表创建语句前加上 Drop table 语句, 默认开启; 不开启 (--skip-add-drop-table) |
+| -n 或 --no-create-db   | 不包含数据库的创建语句                                       |
+| -t 或 --no-create-info | 不包含数据表的创建语句                                       |
+| -d 或 --no-data        | 不包含数据                                                   |
+| -T 或 --tab=name       | 自动生成两个文件：<br/>一个 .sql 文件，创建表结构的语句；<br/>一个 .txt 文件，数据文件，相当于 select into outfile； |
 
 示例 ：
 ```sh
@@ -162,9 +154,7 @@ mysqlimport [options]  db_name  textfile1  [textfile2...]
 mysqlimport -uroot -p2143 test /tmp/city.txt
 ```
 
-
-
-如果需要导入sql文件,可以使用mysql中的source 指令 : 
+如果需要导入 SQL 文件,可以使用 MySQL 中的 source 指令: 
 
 ```sh
 source /root/tb_book.sql
@@ -182,23 +172,21 @@ mysqlshow [options] [db_name [table_name [col_name]]]
 
 参数：
 
-| 参数    | 说明                                                |
-| ------- | --------------------------------------------------- |
-| --count | 显示数据库及表的统计信息（数据库，表 均可以不指定） |
-| -i      | 显示指定数据库或者指定表的状态信息                  |
-
-
+| 参数    | 说明                                               |
+| ------- | -------------------------------------------------- |
+| --count | 显示数据库及表的统计信息（数据库，表均可以不指定） |
+| -i      | 显示指定数据库或者指定表的状态信息                 |
 
 示例：
 
 ```sh
-#查询每个数据库的表的数量及表中记录的数量
+# 查询每个数据库的表的数量及表中记录的数量
 mysqlshow -uroot -p2143 --count
 
-#查询test库中每个表中的字段书，及行数
+# 查询test库中每个表中的字段书，及行数
 mysqlshow -uroot -p2143 test --count
 
-#查询test库中book表的详细情况
+# 查询 test 库中 book 表的详细情况
 mysqlshow -uroot -p2143 test book --count
 ```
 
